--- a/style/blocks/_header.scss
+++ b/style/blocks/_header.scss
@@ -1,16 +1,21 @@
-.header-1{
+.header {
+    position: sticky;
+    top: 0;
+}
+.header__block-1{
     background-color: #18154B;
     height: 46px;
 }
-.header-1__container {
-    max-width: 1180px;
+.header__container {
+    max-width: 1192px;
+    padding: 0 6px;
     height: 100%;
     display: flex;
     margin: auto;
     align-items: center;
     justify-content: space-between;
 }
-.header-1__contacts {
+.header__contacts {
     display: flex;
     justify-content: space-between;
     width: 340px;
@@ -26,37 +31,30 @@
         }
     }
 }
-.header-1__media {
+.header__media {
     display: flex;
     width: 70px;
     justify-content: space-between;
 }
-.header-2{
+.header__block-2{
     background-color: #FFFFFF;
     height: 70px;
     box-shadow: 0px 4px 20px 0px #00075E1A;
 }
-.header-2__container {
-    max-width: 1180px;
-    height: 100%;
-    display: flex;
-    margin: auto;
-    align-items: center;
-    justify-content: space-between;
-}
-.header-2__logo {
+.header__logo {
     font-weight: 800;
     font-size: 20px;
     background: linear-gradient(73.56deg, #0D748B -10.13%, #1A0B73 75.49%);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
+    white-space: nowrap;
 }
-.header-2__menu-1 {
+.header__navigation {
     display: flex;
     width: 574px;
     justify-content: space-between;
-    h3 {
+    h3, a {
         font-size: 16px;
         font-weight: 400;
         color: #303239;
@@ -66,7 +64,7 @@
         }
     }
 }
-.header-2__menu-1__catalog {
+.header__catalog {
     h3 {
         float: left;
         margin-right: 8px;
@@ -75,7 +73,7 @@
         margin-bottom: 2px;
     }
 }
-.header-2__menu-2 {
+.header__menu {
     display: flex;
     width: 140px;
     justify-content: space-between;
@@ -86,10 +84,12 @@
         border-radius: 50%;
         background-color: #F0F5FB;
         position: relative;
+        margin-right: 7px;
         img {
             position: absolute;
-            left: 10px;
-            top: 10px;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
         }
         h4 {
             position: absolute;
@@ -105,5 +105,191 @@
             right: -7px;
             z-index: 1;
         }
+    }
+}
+.mobile-header {
+    background: #FFF;
+    box-shadow: 0px 4px 20px 0px rgba(0, 7, 94, 0.10);
+    height: 56px;
+    width: 100%;
+    display: none;
+}
+.mobile-header__container {
+    padding: 0 10px;
+    background: #FFF;
+    align-items: center;
+    justify-content: space-between;
+    display: flex;
+    height: 56px;
+}
+.mobile-header__logo {
+    font-weight: 800;
+    font-size: 18px;
+    background: linear-gradient(73.56deg, #0D748B -10.13%, #1A0B73 75.49%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    white-space: nowrap;
+}
+.mobile-header__top-navigation {
+    display: flex;
+    width: calc(100% - 250px);
+    justify-content: space-evenly;
+    a {
+        font-size: 16px;
+        font-weight: 400;
+        color: #303239;
+        &:hover {
+            color: #303239B2;
+            cursor: pointer;
+        }
+    }
+}
+.mobile-header__menu {
+    display: flex;
+    width: 140px;
+    justify-content: space-between;
+    button {
+        width: 36px;
+        height: 36px;
+        border: 0;
+        border-radius: 50%;
+        background-color: #F0F5FB;
+        position: relative;
+        margin-right: 2px;
+        img {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            width: 18px;
+        }
+        h4 {
+            position: absolute;
+            font-size: 7.5px;
+            font-weight: 500;
+            background: #18154B;
+            color: #FFFFFF;
+            width: 14px;
+            height: 14px;
+            border-radius: 50%;
+            padding-top: 2px;
+            top: -2px;
+            right: -2px;
+            z-index: 1;
+        }
+    }
+}
+@media (max-width: 1080px) {
+    .header__navigation {
+        justify-content: space-around;
+    }
+}
+@media (max-width: 980px) {
+    .header__block-1, .header__block-2 {
+        display: none;
+    }
+    .mobile-header {
+        display: block;
+    }
+}
+@media (max-width: 580px) {
+    .mobile-header__top-navigation {
+        display: none;
+    }
+}
+.mobile-header__full-menu {
+    background-color: #FFFFFF;
+    display: none;
+    flex-direction: column;
+    padding: 10px;
+    padding-bottom: 40px;
+    .mobile-header__navigation {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        width: 100%;
+        margin: 60px 0 30px 0;
+        h3, a {
+            font-size: 16px;
+            font-weight: 400;
+            color: #303239;
+            margin-top: 10px;
+            padding-bottom: 10px;
+            border-bottom: #F0F5FB solid 1px;
+            &:hover {
+                color: #303239B2;
+                cursor: pointer;
+            }
+        }
+        .mobile-header__catalog {
+            position: relative;
+            img {
+                position: absolute;
+                right: 0;
+                top: 40%;
+                transform: translate(-50%, 0);
+            }
+        }
+    }
+}
+.mobile-header__search-input {
+    position: relative;
+    input {
+        position: absolute;
+        background-color: #F0F5FB;
+        padding: 0 15px;
+        border: 0;
+        border-radius: 50px;
+        width: 100%;
+        height: 40px;
+        font-size: 14px;
+        font-weight: 400;
+        color: #303239;
+    }
+    button {
+        position: absolute;
+        right: 6px;
+        top: 0;
+        background-color: #fff0;
+        border-radius: 50px;
+        width: 40px;
+        height: 40px;
+        border: 0;
+        img {
+            height: 18px;
+        }
+    }
+}
+.mobile-header__contacts {
+    width: 100%;
+    a {
+        color: #303239;
+        display: flex;
+        gap: 10px;
+        margin-bottom: 15px;
+        h3 {
+            font-size: 14px;
+            font-weight: 400;
+        }
+    }
+}
+.mobile-header__call {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    .mobile-header__media {
+        display: flex;
+        gap: 10px;
+        a {
+            height: 30px;
+        }
+    }
+}
+.mobile-header_open {
+    background-color: #18154BCC;
+    height: 100vh;
+    .mobile-header__full-menu {
+        display: flex;
     }
 }
