--- a/style/index.scss
+++ b/style/index.scss
@@ -9,7 +9,9 @@
     text-decoration: none;
 }
 .main__container {
-    max-width: 1180px;
+    max-width: 1200px;
+    padding: 0 10px;
+    margin: auto;
 }
 main {
     min-height: 100vh;
@@ -17,4 +19,271 @@ main {
 }
 .lock {
     overflow-y: hidden;
+}
+.banner {
+    display: grid;
+    grid-template-columns: 7.8fr 3.8fr;
+    gap: 20px;
+    margin-top: 40px;
+    margin-bottom: 10px;
+    h3 {
+        font-size: 18px;
+        font-weight: 600;
+        color: #FFFFFF;
+    }
+}
+.banner__guarantee {
+    border-radius: 10px;
+    background: url("/img/microciruit.svg"), radial-gradient(298px 281px at calc(100% + 73px) center, #346EA433 0, #346EA433 100%, transparent), linear-gradient(73.56deg, #0D748B -10.13%, #1A0B73 75.49%);
+    background-repeat: no-repeat;
+    padding: 80px 0 0 60px;
+    position: relative;
+    height: 440px;
+    h1 {
+        font-size: 38px;
+        font-weight: 800;
+        color: #FFFFFF;
+        width: 341px;
+        margin-bottom: 20px;
+        text-transform: uppercase;
+        line-height: 51.83px;
+    }
+    button {
+        margin-top: 30px;
+    }
+    img {
+        position: absolute;
+        right: 45px;
+        top: 95px;
+    }
+}
+.pagination {
+    position: absolute;
+    right: 30px;
+    bottom: 30px;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    span {
+        content: '';
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        background-color: #38B0C166;
+    }
+    .banner__select {
+        width: 12px;
+        height: 12px;
+        background-color: #38B0C1;
+    }
+}
+.banner__discount {
+    background-color: #1A0B73;
+    border-radius: 10px;
+    height: 440px;
+    background: 
+    radial-gradient(85.056% 113.4% at 102.5% 106.32%, #42E8E0 0%, #40DDDA 9.21%, #3AAEC0 17.3%, #3484A9 25.73%, #2F6195 34.58%, #2B4486 44%, #282E79 54.25%, #261E71 65.94%, #24156C 82.26%, transparent),
+    radial-gradient(85.056% 113.4% at -2.5% -6.32%, #42E8E0 0%, #40DDDA 9.21%, #3AAEC0 17.3%, #3484A9 25.73%, #2F6195 34.58%, #2B4486 44%, #282E79 54.25%, #261E71 65.94%, #24156C 82.26%, transparent),
+    #24126A;
+    padding: 40px 0 0 40px;
+    position: relative;
+    color: #FFFFFF;
+    h2 {
+        font-size: 28px;
+        font-weight: 800;
+        width: 231px;
+        margin-bottom: 10px;
+        text-transform: uppercase;
+        line-height: 38.19px;
+    }
+    .to-catalog-white {
+        position: absolute;
+        bottom: 30px;
+        right: 30px;
+    }
+}
+.banner__bitcoin {
+    position: absolute;
+    left: 8px;
+    bottom: 23px;
+}
+.banner__sub-title {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    h1 {
+        font-size: 56px;
+        font-weight: 700;
+    }
+}
+@media (max-width: 1080px) {
+    .banner {
+        grid-template-columns: 1fr;
+        gap: 10px;
+    }
+    .banner__sub-title {
+        gap: 10px;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .banner__bitcoin {
+        top: 40px;
+        right: 8px;
+        left: auto;
+        bottom: auto;
+    }
+    .banner__discount {
+        height: 320px;
+    }
+}
+@media (max-width: 710px) {
+    .banner__sub-title {
+        h1 {
+            font-size: 38px;
+        }
+    }
+    .banner__discount {
+        padding: 30px 0 0 30px;
+        height: 246px;
+        h2 {
+            font-size: 20px;
+            width: 166px;
+            line-height: 27.28px;
+        }
+        .to-catalog-white {
+            bottom: 20px;
+        }
+        h3 {
+            font-size: 14px;
+        }
+    }
+    .banner__bitcoin {
+        right: -3px;
+        height: 136px;
+    }
+    .banner__guarantee {
+        padding: 30px 0 0 30px;
+        height: 400px;
+        
+        img {
+            width: 186px;
+            right: 16px;
+            bottom: 36px;
+            top: auto;
+        }
+    }
+    .pagination {
+        right: 50%;
+        bottom: 20px;
+        transform: translate(50%, 0);
+    }
+}
+@media (max-width: 580px) {
+    .banner__bitcoin {
+        width: 136px;
+    }
+    .banner__guarantee {
+        background: url("/img/microciruit1.svg") top -14px left 0/ 353px 368px, radial-gradient(166px 166px at calc(100% + 90px) calc(100% - 128px), #346EA433 0, #346EA433 100%, transparent), linear-gradient(73.56deg, #0D748B -10.13%, #1A0B73 75.49%);
+        background-repeat: no-repeat;
+        h1 {
+            font-size: 22px;
+            line-height: 30px;
+            width: 200px;
+            margin-bottom: 10px;
+        }
+        h3 {
+            font-size: 16px;
+        }
+        .white-button {
+            margin-top: 18px;
+        }
+        img {
+            width: 146px;
+        }
+    }
+}
+.categories {
+    margin: 80px 0 10px 0;
+    h1 {
+        font-size: 36px;
+        font-weight: 800;
+        color: #18154B;
+        text-transform: uppercase;
+    }
+}
+.categories__broduct-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+    width: 100%;
+    margin-top: 40px;
+}
+.categories__product {
+    height: 170px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 20px 0px #00075E1A;
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    align-items: flex-end;
+    padding: 30px 30px 0 0;
+    background: 
+    linear-gradient(86.02deg, #0D748B -46px, #1A0B73 102px,  transparent 100px),
+    radial-gradient(113px at 27px center,#1A0B73 113px, transparent);
+    .to-catalog-black {
+        position: absolute;
+        right: 65px;
+        bottom: 30px;
+    }
+    h2 {
+        width: calc(100% - 195px);
+        font-size: 18px;
+        line-height: 23.4px;
+        font-weight: 600;
+    }
+}
+.categories__product-img {
+    position: absolute;
+    top: 20px;
+    left: 35px;
+}
+@media (max-width: 1180px) {
+    .categories__broduct-list {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+@media (max-width: 800px) {
+    .categories__broduct-list {
+        grid-template-columns: 1fr;
+    }
+}
+@media (max-width: 580px) {
+    .categories__product {
+        background: 
+        linear-gradient(86.02deg, #0D748B -46px, #1A0B73 46px,  transparent 46px),
+        radial-gradient(100px at -16px center,#1A0B73 100px, transparent);
+        height: 140px;
+        padding: 20px 20px 0 0;
+        h2 {
+            font-size: 16px;
+            width: calc(100% - 140px);
+            line-height: 20.8px;
+        }
+    }
+    .categories__product-img {
+        width: 110px;
+        top: 19px;
+        left: 20px;
+    }
+    .categories h1 {
+        font-size: 22px;
+    }
+    .categories__broduct-list {
+        margin-top: 30px;
+    }
+}
+@media (max-width: 320px) {
+    .categories__product .to-catalog-black {
+        right: calc(100% - 235px);
+    }
 }
