--- a/style/index.scss
+++ b/style/index.scss
@@ -34,8 +34,7 @@ main {
 }
 .banner__guarantee {
     border-radius: 10px;
-    background: url("/img/microciruit.svg"), radial-gradient(298px 281px at calc(100% + 73px) center, #346EA433 0, #346EA433 100%, transparent), linear-gradient(73.56deg, #0D748B -10.13%, #1A0B73 75.49%);
-    background-repeat: no-repeat;
+    background: url("/img/microciruit.svg") no-repeat, radial-gradient(298px 281px at calc(100% + 73px) center, #346EA433 0, #346EA433 100%, transparent), linear-gradient(73.56deg, #0D748B -10.13%, #1A0B73 75.49%);
     padding: 80px 0 0 60px;
     position: relative;
     height: 440px;
@@ -78,13 +77,12 @@ main {
     }
 }
 .banner__discount {
-    background-color: #1A0B73;
     border-radius: 10px;
     height: 440px;
     background: 
     radial-gradient(85.056% 113.4% at 102.5% 106.32%, #42E8E0 0%, #40DDDA 9.21%, #3AAEC0 17.3%, #3484A9 25.73%, #2F6195 34.58%, #2B4486 44%, #282E79 54.25%, #261E71 65.94%, #24156C 82.26%, transparent),
     radial-gradient(85.056% 113.4% at -2.5% -6.32%, #42E8E0 0%, #40DDDA 9.21%, #3AAEC0 17.3%, #3484A9 25.73%, #2F6195 34.58%, #2B4486 44%, #282E79 54.25%, #261E71 65.94%, #24156C 82.26%, transparent),
-    #24126A;
+    #1A0B73;
     padding: 40px 0 0 40px;
     position: relative;
     color: #FFFFFF;
@@ -183,8 +181,7 @@ main {
         width: 136px;
     }
     .banner__guarantee {
-        background: url("/img/microciruit1.svg") top -14px left 0/ 353px 368px, radial-gradient(166px 166px at calc(100% + 90px) calc(100% - 128px), #346EA433 0, #346EA433 100%, transparent), linear-gradient(73.56deg, #0D748B -10.13%, #1A0B73 75.49%);
-        background-repeat: no-repeat;
+        background: url("/img/microciruit1.svg") no-repeat top -14px left 0/ 353px 368px, radial-gradient(166px 166px at calc(100% + 90px) calc(100% - 128px), #346EA433 0, #346EA433 100%, transparent), linear-gradient(73.56deg, #0D748B -10.13%, #1A0B73 75.49%);
         h1 {
             font-size: 22px;
             line-height: 30px;
@@ -211,7 +208,7 @@ main {
         text-transform: uppercase;
     }
 }
-.categories__broduct-list {
+.categories__product-list {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 20px;
@@ -221,7 +218,7 @@ main {
 .categories__product {
     height: 170px;
     border-radius: 10px;
-    box-shadow: 0px 4px 20px 0px #00075E1A;
+    box-shadow: 0 4px 20px 0 #00075E1A;
     display: flex;
     position: relative;
     flex-direction: column;
@@ -248,12 +245,12 @@ main {
     left: 35px;
 }
 @media (max-width: 1180px) {
-    .categories__broduct-list {
+    .categories__product-list {
         grid-template-columns: 1fr 1fr;
     }
 }
 @media (max-width: 800px) {
-    .categories__broduct-list {
+    .categories__product-list {
         grid-template-columns: 1fr;
     }
 }
@@ -278,7 +275,7 @@ main {
     .categories h1 {
         font-size: 22px;
     }
-    .categories__broduct-list {
+    .categories__product-list {
         margin-top: 30px;
     }
 }
