--- a/style/blocks/_header.scss
+++ b/style/blocks/_header.scss
@@ -92,7 +92,7 @@
             top: 50%;
             transform: translate(-50%, -50%);
         }
-        h4 {
+        span {
             position: absolute;
             font-size: 10px;
             font-weight: 500;
@@ -164,7 +164,7 @@
             transform: translate(-50%, -50%);
             width: 18px;
         }
-        h4 {
+        span {
             position: absolute;
             font-size: 7.5px;
             font-weight: 500;
