--- a/style/index.css
+++ b/style/index.css
@@ -120,7 +120,7 @@
 .header__block-2 {
   background-color: #FFFFFF;
   height: 70px;
-  box-shadow: 0px 4px 20px 0px rgba(0, 7, 94, 0.1019607843);
+  box-shadow: 0 4px 20px 0 rgba(0, 7, 94, 0.1019607843);
 }
 
 .header__logo {
@@ -192,7 +192,7 @@
 
 .mobile-header {
   background: #FFF;
-  box-shadow: 0px 4px 20px 0px rgba(0, 7, 94, 0.1);
+  box-shadow: 0 4px 20px 0 rgba(0, 7, 94, 0.1);
   height: 56px;
   width: 100%;
   display: none;
@@ -290,8 +290,7 @@
   background-color: #FFFFFF;
   display: none;
   flex-direction: column;
-  padding: 10px;
-  padding-bottom: 40px;
+  padding: 10px 10px 40px 10px;
 }
 .mobile-header__full-menu .mobile-header__navigation {
   display: flex;
