--- a/style/blocks/_elements.scss
+++ b/style/blocks/_elements.scss
@@ -9,7 +9,7 @@
         background: linear-gradient(0deg, rgba(255, 255, 255, 0.50) 0%, rgba(255, 255, 255, 0.50) 100%), linear-gradient(74deg, #0D748B -10.13%, #1A0B73 75.49%);
     }
     &:hover {
-        box-shadow: 0px 4px 20px 0px rgba(26, 11, 115, 0.40);
+        box-shadow: 0 4px 20px 0 rgba(26, 11, 115, 0.40);
         cursor: pointer;
     }
     &:active {
@@ -29,7 +29,7 @@
         background: rgba(255, 255, 255, 0.60);
     }
     &:hover {
-        box-shadow: 0px 4px 30px 0px rgba(255, 255, 255, 0.40);
+        box-shadow: 0 4px 30px 0 rgba(255, 255, 255, 0.40);
         cursor: pointer;
     }
     &:active {
@@ -45,7 +45,7 @@
     gap: 10px;
     width: 117px;
     font-size: 16px;
-    text-wrap: nowrap;
+    text-wrap: none;
 }
 .to-catalog-black {
     background: none;
@@ -56,7 +56,7 @@
     gap: 10px;
     width: 117px;
     font-size: 16px;
-    text-wrap: nowrap;
+    text-wrap: none;
 }
 @media (max-width: 580px) {
     .white-button {
