--- a/style/index.css
+++ b/style/index.css
@@ -47,7 +47,7 @@
   gap: 10px;
   width: 117px;
   font-size: 16px;
-  text-wrap: none;
+  white-space: nowrap;
 }
 
 .to-catalog-black {
@@ -59,7 +59,7 @@
   gap: 10px;
   width: 117px;
   font-size: 16px;
-  text-wrap: none;
+  white-space: nowrap;
 }
 
 @media (max-width: 580px) {
@@ -321,10 +321,10 @@
   transform: translate(-50%, 0);
 }
 
-.mobile-header__search-input {
+.mobile-header__search {
   position: relative;
 }
-.mobile-header__search-input input {
+.mobile-header__search input {
   position: absolute;
   background-color: #F0F5FB;
   padding: 0 15px;
@@ -336,7 +336,10 @@
   font-weight: 400;
   color: #303239;
 }
-.mobile-header__search-input button {
+.mobile-header__search input:focus-visible {
+  outline: #F3F3F3 solid 1px;
+}
+.mobile-header__search button {
   position: absolute;
   right: 6px;
   top: 0;
@@ -346,7 +349,7 @@
   height: 40px;
   border: 0;
 }
-.mobile-header__search-input button img {
+.mobile-header__search button img {
   height: 18px;
 }
 
@@ -549,9 +552,12 @@
   margin: auto;
 }
 
+body {
+  background: #F0F5FB;
+}
+
 main {
   min-height: 100vh;
-  background: #F0F5FB;
 }
 
 .lock {
@@ -572,6 +578,7 @@ main {
 }
 
 .banner__guarantee {
+  box-shadow: 0 4px 20px 0 rgba(0, 7, 94, 0.1019607843);
   border-radius: 10px;
   background: url("/img/microciruit.svg") no-repeat, radial-gradient(298px 281px at calc(100% + 73px) center, rgba(52, 110, 164, 0.2) 0, rgba(52, 110, 164, 0.2) 100%, transparent), linear-gradient(73.56deg, #0D748B -10.13%, #1A0B73 75.49%);
   padding: 80px 0 0 60px;
@@ -611,7 +618,7 @@ main {
   border-radius: 50%;
   background-color: rgba(56, 176, 193, 0.4);
 }
-.pagination .banner__select {
+.pagination .banner__select, .pagination .hits__select {
   width: 12px;
   height: 12px;
   background-color: #38B0C1;
@@ -620,6 +627,7 @@ main {
 .banner__discount {
   border-radius: 10px;
   height: 440px;
+  box-shadow: 0 4px 20px 0 rgba(0, 7, 94, 0.1019607843);
   background: radial-gradient(85.056% 113.4% at 102.5% 106.32%, #42E8E0 0%, #40DDDA 9.21%, #3AAEC0 17.3%, #3484A9 25.73%, #2F6195 34.58%, #2B4486 44%, #282E79 54.25%, #261E71 65.94%, #24156C 82.26%, transparent), radial-gradient(85.056% 113.4% at -2.5% -6.32%, #42E8E0 0%, #40DDDA 9.21%, #3AAEC0 17.3%, #3484A9 25.73%, #2F6195 34.58%, #2B4486 44%, #282E79 54.25%, #261E71 65.94%, #24156C 82.26%, transparent), #1A0B73;
   padding: 40px 0 0 40px;
   position: relative;
@@ -659,6 +667,7 @@ main {
   .banner {
     grid-template-columns: 1fr;
     gap: 10px;
+    margin-top: 30px;
   }
   .banner__sub-title {
     gap: 10px;
@@ -676,6 +685,9 @@ main {
   }
 }
 @media (max-width: 710px) {
+  .banner {
+    margin-top: 20px;
+  }
   .banner__sub-title h1 {
     font-size: 38px;
   }
@@ -785,8 +797,12 @@ main {
 }
 
 @media (max-width: 1180px) {
+  .categories {
+    margin-top: 60px;
+  }
   .categories__product-list {
     grid-template-columns: 1fr 1fr;
+    margin-top: 30px;
   }
 }
 @media (max-width: 800px) {
@@ -821,6 +837,234 @@ main {
   .categories__product .to-catalog-black {
     right: calc(100% - 235px);
   }
+}
+.advantages {
+  box-shadow: 0 4px 20px 0 rgba(0, 7, 94, 0.1019607843);
+  background: url("/img/advantages_bg.svg"), radial-gradient(98.19% 130.91% at -8.58% -1.44%, #42E8E0 0%, #40DDDA 1.57%, #3AAEC0 9.21%, #3484A9 17.3%, #2F6195 25.73%, #2B4486 34.58%, #282E79 44%, #180564 72.26%, transparent 72.26%), radial-gradient(98.19% 130.91% at 108.58% 107.44%, #42E8E0 0%, #40DDDA 1.57%, #3AAEC0 9.21%, #3484A9 17.3%, #2F6195 25.73%, #2B4486 34.58%, #282E79 44%, #180564 72.26%);
+  height: 374px;
+  margin-bottom: 10px;
+  margin-top: 80px;
+  border-radius: 10px;
+  position: relative;
+  padding: 50px 10px 0 60px;
+}
+.advantages h1 {
+  font-size: 36px;
+  font-weight: 800;
+  width: 340px;
+  text-transform: uppercase;
+  color: #FFF;
+}
+
+.advantages__img {
+  position: absolute;
+  bottom: 15px;
+  left: 55px;
+}
+
+.advantages__block {
+  width: calc(100% - 480px);
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  position: absolute;
+  column-gap: 20px;
+  row-gap: 40px;
+  top: 50px;
+  right: 0;
+}
+
+.advantages__item img {
+  margin-bottom: 4px;
+  border-radius: 50%;
+  box-shadow: 0 4px 40px 0 rgba(0, 6, 84, 0.9019607843);
+}
+.advantages__item h3 {
+  font-size: 16px;
+  font-weight: 600;
+  color: #FFFFFF;
+}
+
+@media (max-width: 1080px) {
+  .advantages {
+    padding: 50px 10px 0 40px;
+  }
+  .advantages__img {
+    left: 35px;
+  }
+  .advantages__block {
+    width: calc(100% - 380px);
+  }
+}
+@media (max-width: 980px) {
+  .advantages {
+    background: url("/img/advantages_bg_mobile.svg") no-repeat, radial-gradient(98.19% 130.91% at -8.58% -1.44%, #42E8E0 0%, #40DDDA 1.57%, #3AAEC0 9.21%, #3484A9 17.3%, #2F6195 25.73%, #2B4486 34.58%, #282E79 44%, #180564 72.26%, transparent 72.26%), radial-gradient(98.19% 130.91% at 108.58% 107.44%, #42E8E0 0%, #40DDDA 1.57%, #3AAEC0 9.21%, #3484A9 17.3%, #2F6195 25.73%, #2B4486 34.58%, #282E79 44%, #180564 72.26%);
+    padding: 30px;
+    height: 678px;
+  }
+  .advantages h1 {
+    margin-bottom: 30px;
+  }
+  .advantages__block {
+    position: unset;
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 100%;
+  }
+  .advantages__img {
+    left: 50%;
+    transform: translate(-50%, 0);
+    height: 257px;
+  }
+}
+@media (max-width: 710px) {
+  .advantages {
+    height: 818px;
+    margin-top: 60px;
+  }
+  .advantages__block {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (max-width: 480px) {
+  .advantages h1 {
+    font-size: 22px;
+    font-weight: 800;
+    width: auto;
+  }
+  .advantages__block {
+    grid-template-columns: 1fr;
+    gap: 20px;
+  }
+  .advantages__item {
+    display: flex;
+    align-items: center;
+    gap: 14px;
+  }
+  .advantages__item img {
+    margin: 0;
+  }
+}
+.hits {
+  position: relative;
+  height: 490px;
+  margin: 80px 0 10px 0;
+}
+.hits h1 {
+  font-size: 36px;
+  font-weight: 800;
+  text-transform: uppercase;
+}
+.hits .pagination {
+  right: 50%;
+  bottom: 0;
+  transform: translate(50%, 0);
+}
+
+.hits__block {
+  display: flex;
+  gap: 20px;
+  margin-top: 40px;
+}
+
+.hits__product {
+  box-shadow: 0 4px 20px 0 rgba(0, 7, 94, 0.1019607843);
+  background-color: #FFFFFF;
+  border-radius: 10px;
+  padding: 30px 20px 30px 20px;
+  position: relative;
+  height: 360px;
+  width: 220px;
+  display: flex;
+  flex-direction: column;
+}
+.hits__product .button-gradient {
+  margin: 0 auto;
+}
+
+.hits__product-name {
+  font-size: 14px;
+  font-weight: 600;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  margin: 10px 0 6px 0;
+}
+
+.hits__cart {
+  width: 40px;
+  height: 40px;
+  border: 0;
+  border-radius: 50%;
+  background-color: #F0F5FB;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hits__product-img {
+  height: 160px;
+  margin: 0 auto;
+}
+
+.hits__presence {
+  font-size: 12px;
+  font-weight: 600;
+  margin-left: 14px;
+  position: relative;
+}
+.hits__presence::before {
+  position: absolute;
+  content: "";
+  display: block;
+  height: 6px;
+  width: 6px;
+  border-radius: 50%;
+  background: #38B0C1;
+  left: -14px;
+  top: 5px;
+}
+
+.hits__price-block {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+.hits__price-block h2 {
+  font-size: 14px;
+  font-weight: 700;
+  color: #303239;
+}
+.hits__price-block del {
+  font-size: 10px;
+  color: #9B9B9B;
+  text-decoration: line-through;
+  margin-right: 13px;
+}
+
+.hits__label {
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  height: 22px;
+  background-color: #F0F5FB;
+  border-radius: 4px;
+}
+.hits__label span {
+  text-transform: uppercase;
+  padding: 0 10px;
+  font-size: 12px;
+  font-weight: 800;
+  background: linear-gradient(73.56deg, #0D748B -10.13%, #1A0B73 75.49%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.hits__favourite {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  width: 22px;
 }
 
 /*# sourceMappingURL=index.css.map */
