--- a/style/blocks/_elements.scss
+++ b/style/blocks/_elements.scss
@@ -5,6 +5,7 @@
     border-radius: 50px;
     border: 0;
     color: #FFFFFF;
+    font-size: 14px;
     &:disabled {
         background: linear-gradient(0deg, rgba(255, 255, 255, 0.50) 0%, rgba(255, 255, 255, 0.50) 100%), linear-gradient(74deg, #0D748B -10.13%, #1A0B73 75.49%);
     }
