--- a/style/blocks/_footer.scss
+++ b/style/blocks/_footer.scss
@@ -1,6 +1,7 @@
 .footer {
     background-color: #18154B;
     height: 336px;
+    margin-top: 80px;
     .white-button {
         align-self: center;
         justify-self: right;
