--- a/style/blocks/_header.scss
+++ b/style/blocks/_header.scss
@@ -3,7 +3,7 @@
     top: 0;
     z-index: 1;
 }
-.header__block-1{
+.header__block-blue{
     background-color: #18154B;
     height: 46px;
 }
@@ -37,12 +37,12 @@
     width: 70px;
     justify-content: space-between;
 }
-.header__block-2{
+.header__block-white{
     background-color: #FFFFFF;
     height: 70px;
     box-shadow: 0 4px 20px 0 #00075E1A;
 }
-.header__logo {
+h1 {
     font-weight: 800;
     font-size: 20px;
     background: linear-gradient(73.56deg, #0D748B -10.13%, #1A0B73 75.49%);
@@ -122,7 +122,7 @@
     display: flex;
     height: 56px;
 }
-.mobile-header__logo {
+h1 {
     font-weight: 800;
     font-size: 18px;
     background: linear-gradient(73.56deg, #0D748B -10.13%, #1A0B73 75.49%);
@@ -186,7 +186,7 @@
     }
 }
 @media (max-width: 980px) {
-    .header__block-1, .header__block-2 {
+    .header__block-blue, .header__block-white {
         display: none;
     }
     .mobile-header {
