--- a/style/index.css
+++ b/style/index.css
@@ -5,6 +5,7 @@
   border-radius: 50px;
   border: 0;
   color: #FFFFFF;
+  font-size: 14px;
 }
 .button-gradient:disabled {
   background: linear-gradient(0deg, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0.5) 100%), linear-gradient(74deg, #0D748B -10.13%, #1A0B73 75.49%);
@@ -79,7 +80,7 @@
   z-index: 1;
 }
 
-.header__block-1 {
+.header__block-blue {
   background-color: #18154B;
   height: 46px;
 }
@@ -117,13 +118,13 @@
   justify-content: space-between;
 }
 
-.header__block-2 {
+.header__block-white {
   background-color: #FFFFFF;
   height: 70px;
   box-shadow: 0 4px 20px 0 rgba(0, 7, 94, 0.1019607843);
 }
 
-.header__logo {
+h1 {
   font-weight: 800;
   font-size: 20px;
   background: linear-gradient(73.56deg, #0D748B -10.13%, #1A0B73 75.49%);
@@ -207,7 +208,7 @@
   height: 56px;
 }
 
-.mobile-header__logo {
+h1 {
   font-weight: 800;
   font-size: 18px;
   background: linear-gradient(73.56deg, #0D748B -10.13%, #1A0B73 75.49%);
@@ -274,7 +275,7 @@
   }
 }
 @media (max-width: 980px) {
-  .header__block-1, .header__block-2 {
+  .header__block-blue, .header__block-white {
     display: none;
   }
   .mobile-header {
@@ -391,6 +392,7 @@
 .footer {
   background-color: #18154B;
   height: 336px;
+  margin-top: 80px;
 }
 .footer .white-button {
   align-self: center;
@@ -568,8 +570,7 @@ main {
   display: grid;
   grid-template-columns: 7.8fr 3.8fr;
   gap: 20px;
-  margin-top: 40px;
-  margin-bottom: 10px;
+  margin: 40px 0 10px;
 }
 .banner h3 {
   font-size: 18px;
@@ -585,7 +586,7 @@ main {
   position: relative;
   height: 440px;
 }
-.banner__guarantee h1 {
+.banner__guarantee h2 {
   font-size: 38px;
   font-weight: 800;
   color: #FFFFFF;
@@ -628,23 +629,24 @@ main {
   border-radius: 10px;
   height: 440px;
   box-shadow: 0 4px 20px 0 rgba(0, 7, 94, 0.1019607843);
-  background: radial-gradient(85.056% 113.4% at 102.5% 106.32%, #42E8E0 0%, #40DDDA 9.21%, #3AAEC0 17.3%, #3484A9 25.73%, #2F6195 34.58%, #2B4486 44%, #282E79 54.25%, #261E71 65.94%, #24156C 82.26%, transparent), radial-gradient(85.056% 113.4% at -2.5% -6.32%, #42E8E0 0%, #40DDDA 9.21%, #3AAEC0 17.3%, #3484A9 25.73%, #2F6195 34.58%, #2B4486 44%, #282E79 54.25%, #261E71 65.94%, #24156C 82.26%, transparent), #1A0B73;
+  background: radial-gradient(85.056% 113.4% at 102.5% 106.32%, #42E8E0 0%, #40DDDA 1.57%, #3AAEC0 9.21%, #3484A9 17.3%, #2F6195 25.73%, #2B4486 34.58%, #282E79 44%, #180564 72.26%, transparent), radial-gradient(85.056% 113.4% at -2.5% -6.32%, #42E8E0 0%, #40DDDA 1.57%, #3AAEC0 9.21%, #3484A9 17.3%, #2F6195 25.73%, #2B4486 34.58%, #282E79 44%, #180564 72.26%);
   padding: 40px 0 0 40px;
   position: relative;
   color: #FFFFFF;
 }
-.banner__discount h2 {
+.banner__discount .to-catalog-white {
+  position: absolute;
+  bottom: 30px;
+  right: 30px;
+}
+
+.banner__discount-title {
   font-size: 28px;
   font-weight: 800;
   width: 231px;
   margin-bottom: 10px;
   text-transform: uppercase;
   line-height: 38.19px;
-}
-.banner__discount .to-catalog-white {
-  position: absolute;
-  bottom: 30px;
-  right: 30px;
 }
 
 .banner__bitcoin {
@@ -658,7 +660,7 @@ main {
   align-items: center;
   gap: 20px;
 }
-.banner__sub-title h1 {
+.banner__sub-title h2 {
   font-size: 56px;
   font-weight: 700;
 }
@@ -688,17 +690,17 @@ main {
   .banner {
     margin-top: 20px;
   }
-  .banner__sub-title h1 {
+  .banner__sub-title h2 {
     font-size: 38px;
+  }
+  .banner__discount-title {
+    font-size: 20px;
+    width: 166px;
+    line-height: 27.28px;
   }
   .banner__discount {
     padding: 30px 0 0 30px;
     height: 246px;
-  }
-  .banner__discount h2 {
-    font-size: 20px;
-    width: 166px;
-    line-height: 27.28px;
   }
   .banner__discount .to-catalog-white {
     bottom: 20px;
@@ -731,9 +733,9 @@ main {
     width: 136px;
   }
   .banner__guarantee {
-    background: url("/img/microciruit1.svg") no-repeat top -14px left 0/353px 368px, radial-gradient(166px 166px at calc(100% + 90px) calc(100% - 128px), rgba(52, 110, 164, 0.2) 0, rgba(52, 110, 164, 0.2) 100%, transparent), linear-gradient(73.56deg, #0D748B -10.13%, #1A0B73 75.49%);
+    background: url("/img/microciruit_mobile.svg") no-repeat top -14px left 0/353px 368px, radial-gradient(166px 166px at calc(100% + 90px) calc(100% - 128px), rgba(52, 110, 164, 0.2) 0, rgba(52, 110, 164, 0.2) 100%, transparent), linear-gradient(73.56deg, #0D748B -10.13%, #1A0B73 75.49%);
   }
-  .banner__guarantee h1 {
+  .banner__guarantee h2 {
     font-size: 22px;
     line-height: 30px;
     width: 200px;
@@ -752,7 +754,8 @@ main {
 .categories {
   margin: 80px 0 10px 0;
 }
-.categories h1 {
+
+.categories__title {
   font-size: 36px;
   font-weight: 800;
   color: #18154B;
@@ -783,7 +786,7 @@ main {
   right: 65px;
   bottom: 30px;
 }
-.categories__product h2 {
+.categories__product h3 {
   width: calc(100% - 195px);
   font-size: 18px;
   line-height: 23.4px;
@@ -806,17 +809,12 @@ main {
   }
 }
 @media (max-width: 800px) {
-  .categories__product-list {
-    grid-template-columns: 1fr;
-  }
-}
-@media (max-width: 580px) {
   .categories__product {
     background: linear-gradient(86.02deg, #0D748B -46px, #1A0B73 46px, transparent 46px), radial-gradient(100px at -16px center, #1A0B73 100px, transparent);
     height: 140px;
     padding: 20px 20px 0 0;
   }
-  .categories__product h2 {
+  .categories__product h3 {
     font-size: 16px;
     width: calc(100% - 140px);
     line-height: 20.8px;
@@ -826,29 +824,29 @@ main {
     top: 19px;
     left: 20px;
   }
-  .categories h1 {
-    font-size: 22px;
-  }
   .categories__product-list {
     margin-top: 30px;
   }
 }
-@media (max-width: 320px) {
-  .categories__product .to-catalog-black {
-    right: calc(100% - 235px);
+@media (max-width: 684px) {
+  .categories__title {
+    font-size: 22px;
+  }
+  .categories__product-list {
+    grid-template-columns: 1fr;
   }
 }
 .advantages {
   box-shadow: 0 4px 20px 0 rgba(0, 7, 94, 0.1019607843);
   background: url("/img/advantages_bg.svg"), radial-gradient(98.19% 130.91% at -8.58% -1.44%, #42E8E0 0%, #40DDDA 1.57%, #3AAEC0 9.21%, #3484A9 17.3%, #2F6195 25.73%, #2B4486 34.58%, #282E79 44%, #180564 72.26%, transparent 72.26%), radial-gradient(98.19% 130.91% at 108.58% 107.44%, #42E8E0 0%, #40DDDA 1.57%, #3AAEC0 9.21%, #3484A9 17.3%, #2F6195 25.73%, #2B4486 34.58%, #282E79 44%, #180564 72.26%);
   height: 374px;
-  margin-bottom: 10px;
-  margin-top: 80px;
+  margin: 80px 0 10px;
   border-radius: 10px;
   position: relative;
   padding: 50px 10px 0 60px;
 }
-.advantages h1 {
+
+.advantages__title {
   font-size: 36px;
   font-weight: 800;
   width: 340px;
@@ -882,26 +880,16 @@ main {
   font-size: 16px;
   font-weight: 600;
   color: #FFFFFF;
+  width: 180px;
 }
 
 @media (max-width: 1080px) {
   .advantages {
-    padding: 50px 10px 0 40px;
-  }
-  .advantages__img {
-    left: 35px;
-  }
-  .advantages__block {
-    width: calc(100% - 380px);
-  }
-}
-@media (max-width: 980px) {
-  .advantages {
-    background: url("/img/advantages_bg_mobile.svg") no-repeat, radial-gradient(98.19% 130.91% at -8.58% -1.44%, #42E8E0 0%, #40DDDA 1.57%, #3AAEC0 9.21%, #3484A9 17.3%, #2F6195 25.73%, #2B4486 34.58%, #282E79 44%, #180564 72.26%, transparent 72.26%), radial-gradient(98.19% 130.91% at 108.58% 107.44%, #42E8E0 0%, #40DDDA 1.57%, #3AAEC0 9.21%, #3484A9 17.3%, #2F6195 25.73%, #2B4486 34.58%, #282E79 44%, #180564 72.26%);
+    background: url("/img/advantages_bg_mobile.svg"), radial-gradient(98.19% 80.91% at -8.58% -1.44%, #42E8E0 0%, #40DDDA 1.57%, #3AAEC0 9.21%, #3484A9 17.3%, #2F6195 25.73%, #2B4486 34.58%, #282E79 44%, #180564 72.26%, transparent 72.26%), radial-gradient(98.19% 80.91% at 118.58% 57.44%, #42E8E0 0%, #40DDDA 1.57%, #3AAEC0 9.21%, #3484A9 17.3%, #2F6195 25.73%, #2B4486 34.58%, #282E79 44%, #180564 72.26%);
     padding: 30px;
     height: 678px;
   }
-  .advantages h1 {
+  .advantages__title {
     margin-bottom: 30px;
   }
   .advantages__block {
@@ -925,10 +913,10 @@ main {
   }
 }
 @media (max-width: 480px) {
-  .advantages h1 {
+  .advantages__title {
     font-size: 22px;
     font-weight: 800;
-    width: auto;
+    width: 240px;
   }
   .advantages__block {
     grid-template-columns: 1fr;
@@ -942,16 +930,21 @@ main {
   .advantages__item img {
     margin: 0;
   }
+  .advantages {
+    background: url("/img/advantages_bg_mobile.svg"), radial-gradient(420px 420px at -8.58% -1.44%, #42E8E0 0%, #40DDDA 1.57%, #3AAEC0 9.21%, #3484A9 17.3%, #2F6195 25.73%, #2B4486 34.58%, #282E79 44%, #180564 72.26%, transparent 72.26%), radial-gradient(420px 420px at 108.58% 57.44%, #42E8E0 0%, #40DDDA 1.57%, #3AAEC0 9.21%, #3484A9 17.3%, #2F6195 25.73%, #2B4486 34.58%, #282E79 44%, #180564 72.26%);
+  }
 }
 .hits {
   position: relative;
   height: 490px;
-  margin: 80px 0 10px 0;
+  margin: 80px 0 10px;
+  overflow-y: clip;
 }
-.hits h1 {
+.hits h2 {
   font-size: 36px;
   font-weight: 800;
   text-transform: uppercase;
+  margin-bottom: 40px;
 }
 .hits .pagination {
   right: 50%;
@@ -961,8 +954,10 @@ main {
 
 .hits__block {
   display: flex;
-  gap: 20px;
-  margin-top: 40px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  row-gap: 45px;
+  height: 360px;
 }
 
 .hits__product {
@@ -975,6 +970,7 @@ main {
   width: 220px;
   display: flex;
   flex-direction: column;
+  margin: 0 5px;
 }
 .hits__product .button-gradient {
   margin: 0 auto;
@@ -986,7 +982,7 @@ main {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  margin: 10px 0 6px 0;
+  margin: 10px 0 6px;
 }
 
 .hits__cart {
@@ -1010,6 +1006,7 @@ main {
   font-weight: 600;
   margin-left: 14px;
   position: relative;
+  color: #9B9B9B;
 }
 .hits__presence::before {
   position: absolute;
@@ -1029,16 +1026,21 @@ main {
   justify-content: space-between;
   margin-bottom: 10px;
 }
-.hits__price-block h2 {
+.hits__price-block h3 {
   font-size: 14px;
   font-weight: 700;
   color: #303239;
 }
-.hits__price-block del {
+
+.hits__price-discount {
+  display: flex;
+  align-items: center;
+}
+.hits__price-discount p {
   font-size: 10px;
   color: #9B9B9B;
   text-decoration: line-through;
-  margin-right: 13px;
+  margin-left: 8px;
 }
 
 .hits__label {
@@ -1049,9 +1051,9 @@ main {
   background-color: #F0F5FB;
   border-radius: 4px;
 }
-.hits__label span {
+.hits__label p {
   text-transform: uppercase;
-  padding: 0 10px;
+  padding: 3px 10px;
   font-size: 12px;
   font-weight: 800;
   background: linear-gradient(73.56deg, #0D748B -10.13%, #1A0B73 75.49%);
@@ -1065,6 +1067,95 @@ main {
   top: 15px;
   right: 15px;
   width: 22px;
+}
+
+.hits__show-more {
+  display: none;
+  position: absolute;
+  color: #18154B;
+  border: 0;
+  border-bottom: #18154B dotted 1px;
+  background: none;
+  right: 50%;
+  bottom: 0;
+  transform: translate(50%, 0);
+  font-size: 14px;
+  font-weight: 600;
+}
+
+@media (max-width: 980px) {
+  .hits {
+    height: auto;
+    overflow: unset;
+    padding-bottom: 40px;
+  }
+  .hits__block {
+    height: auto;
+    gap: 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .hits__product {
+    margin: 0;
+    width: 100%;
+  }
+  .hits__product .button-gradient {
+    width: 100%;
+  }
+  .pagination {
+    display: none;
+  }
+}
+@media (max-width: 710px) {
+  .hits__block {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (max-width: 470px) {
+  .hits h2 {
+    font-size: 22px;
+    margin-bottom: 30px;
+  }
+  .hits__product {
+    height: 270px;
+    padding: 40px 15px 15px 15px;
+    width: calc(50vw - 15px);
+  }
+  .hits__product-img {
+    width: 100px;
+    height: 100px;
+  }
+  .hits__product-name {
+    font-size: 12px;
+    margin: 2px 0 6px;
+  }
+  .hits__price-discount {
+    display: unset;
+  }
+  .hits__price-discount p {
+    margin: 0;
+  }
+  .hits__label {
+    height: 20px;
+  }
+  .hits__label p {
+    font-size: 10px;
+  }
+  .hits__favourite {
+    height: 20px;
+    width: 20px;
+  }
+  .hits__cart {
+    width: 34px;
+    height: 34px;
+  }
+  .hits__cart img {
+    height: 16px;
+    width: 16px;
+  }
+  .button-gradient {
+    font-size: 10px;
+  }
 }
 
 /*# sourceMappingURL=index.css.map */
