--- a/style/index.scss
+++ b/style/index.scss
@@ -1,6 +1,23 @@
 @import "./blocks/elements";
 @import "./blocks/header";
 @import "./blocks/footer";
+
+$body-gb: #F0F5FB;
+$color-white: #FFFFFF;
+$shadow: 0 4px 20px 0 #00075E1A;
+$radial-gradient-color-0: #42E8E0 0%;
+$radial-gradient-color-1: #40DDDA 1.57%;
+$radial-gradient-color-2: #3AAEC0 9.21%;
+$radial-gradient-color-3: #3484A9 17.3%;
+$radial-gradient-color-4: #2F6195 25.73%;
+$radial-gradient-color-5: #2B4486 34.58%;
+$radial-gradient-color-6: #282E79 44%;
+$radial-gradient-color-7: #180564 72.26%;
+$linear-gradient-color-1: #0D748B;
+$linear-gradient-color-2: #1A0B73;
+$title-size: 36px;
+$title-size-mobile: 22px;
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -14,7 +31,7 @@
     margin: auto;
 }
 body {
-    background:#F0F5FB;
+    background:$body-gb;
 }
 main {
     min-height: 100vh;
@@ -26,25 +43,24 @@ main {
     display: grid;
     grid-template-columns: 7.8fr 3.8fr;
     gap: 20px;
-    margin-top: 40px;
-    margin-bottom: 10px;
+    margin: 40px 0 10px;
     h3 {
         font-size: 18px;
         font-weight: 600;
-        color: #FFFFFF;
+        color: $color-white;
     }
 }
 .banner__guarantee {
-    box-shadow: 0 4px 20px 0 #00075E1A;
+    box-shadow: $shadow;
     border-radius: 10px;
-    background: url("/img/microciruit.svg") no-repeat, radial-gradient(298px 281px at calc(100% + 73px) center, #346EA433 0, #346EA433 100%, transparent), linear-gradient(73.56deg, #0D748B -10.13%, #1A0B73 75.49%);
+    background: url("/img/microciruit.svg") no-repeat, radial-gradient(298px 281px at calc(100% + 73px) center, #346EA433 0, #346EA433 100%, transparent), linear-gradient(73.56deg, $linear-gradient-color-1 -10.13%, $linear-gradient-color-2 75.49%);
     padding: 80px 0 0 60px;
     position: relative;
     height: 440px;
-    h1 {
+    h2 {
         font-size: 38px;
         font-weight: 800;
-        color: #FFFFFF;
+        color: $color-white;
         width: 341px;
         margin-bottom: 20px;
         text-transform: uppercase;
@@ -82,27 +98,26 @@ main {
 .banner__discount {
     border-radius: 10px;
     height: 440px;
-    box-shadow: 0 4px 20px 0 #00075E1A;
+    box-shadow: $shadow;
     background:
-    radial-gradient(85.056% 113.4% at 102.5% 106.32%, #42E8E0 0%, #40DDDA 9.21%, #3AAEC0 17.3%, #3484A9 25.73%, #2F6195 34.58%, #2B4486 44%, #282E79 54.25%, #261E71 65.94%, #24156C 82.26%, transparent),
-    radial-gradient(85.056% 113.4% at -2.5% -6.32%, #42E8E0 0%, #40DDDA 9.21%, #3AAEC0 17.3%, #3484A9 25.73%, #2F6195 34.58%, #2B4486 44%, #282E79 54.25%, #261E71 65.94%, #24156C 82.26%, transparent),
-    #1A0B73;
+    radial-gradient(85.056% 113.4% at 102.5% 106.32%, $radial-gradient-color-0, $radial-gradient-color-1, $radial-gradient-color-2, $radial-gradient-color-3, $radial-gradient-color-4, $radial-gradient-color-5, $radial-gradient-color-6, $radial-gradient-color-7, transparent),
+    radial-gradient(85.056% 113.4% at -2.5% -6.32%, $radial-gradient-color-0, $radial-gradient-color-1, $radial-gradient-color-2, $radial-gradient-color-3, $radial-gradient-color-4, $radial-gradient-color-5, $radial-gradient-color-6, $radial-gradient-color-7);
     padding: 40px 0 0 40px;
     position: relative;
-    color: #FFFFFF;
-    h2 {
-        font-size: 28px;
-        font-weight: 800;
-        width: 231px;
-        margin-bottom: 10px;
-        text-transform: uppercase;
-        line-height: 38.19px;
-    }
+    color: $color-white;
     .to-catalog-white {
         position: absolute;
         bottom: 30px;
         right: 30px;
     }
+}
+.banner__discount-title {
+    font-size: 28px;
+    font-weight: 800;
+    width: 231px;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+    line-height: 38.19px;
 }
 .banner__bitcoin {
     position: absolute;
@@ -113,7 +128,7 @@ main {
     display: flex;
     align-items: center;
     gap: 20px;
-    h1 {
+    h2 {
         font-size: 56px;
         font-weight: 700;
     }
@@ -144,18 +159,18 @@ main {
         margin-top: 20px;
     }
     .banner__sub-title {
-        h1 {
+        h2 {
             font-size: 38px;
         }
+    }
+    .banner__discount-title {
+        font-size: 20px;
+        width: 166px;
+        line-height: 27.28px;
     }
     .banner__discount {
         padding: 30px 0 0 30px;
         height: 246px;
-        h2 {
-            font-size: 20px;
-            width: 166px;
-            line-height: 27.28px;
-        }
         .to-catalog-white {
             bottom: 20px;
         }
@@ -189,8 +204,8 @@ main {
         width: 136px;
     }
     .banner__guarantee {
-        background: url("/img/microciruit1.svg") no-repeat top -14px left 0/ 353px 368px, radial-gradient(166px 166px at calc(100% + 90px) calc(100% - 128px), #346EA433 0, #346EA433 100%, transparent), linear-gradient(73.56deg, #0D748B -10.13%, #1A0B73 75.49%);
-        h1 {
+        background: url("/img/microciruit_mobile.svg") no-repeat top -14px left 0/ 353px 368px, radial-gradient(166px 166px at calc(100% + 90px) calc(100% - 128px), #346EA433 0, #346EA433 100%, transparent), linear-gradient(73.56deg, $linear-gradient-color-1 -10.13%, $linear-gradient-color-2 75.49%);
+        h2 {
             font-size: 22px;
             line-height: 30px;
             width: 200px;
@@ -209,12 +224,12 @@ main {
 }
 .categories {
     margin: 80px 0 10px 0;
-    h1 {
-        font-size: 36px;
-        font-weight: 800;
-        color: #18154B;
-        text-transform: uppercase;
-    }
+}
+.categories__title {
+    font-size: $title-size;
+    font-weight: 800;
+    color: #18154B;
+    text-transform: uppercase;
 }
 .categories__product-list {
     display: grid;
@@ -226,21 +241,21 @@ main {
 .categories__product {
     height: 170px;
     border-radius: 10px;
-    box-shadow: 0 4px 20px 0 #00075E1A;
+    box-shadow: $shadow;
     display: flex;
     position: relative;
     flex-direction: column;
     align-items: flex-end;
     padding: 30px 30px 0 0;
     background: 
-    linear-gradient(86.02deg, #0D748B -46px, #1A0B73 102px,  transparent 100px),
-    radial-gradient(113px at 27px center,#1A0B73 113px, transparent);
+    linear-gradient(86.02deg, $linear-gradient-color-1 -46px, $linear-gradient-color-2 102px,  transparent 100px),
+    radial-gradient(113px at 27px center,$linear-gradient-color-2 113px, transparent);
     .to-catalog-black {
         position: absolute;
         right: 65px;
         bottom: 30px;
     }
-    h2 {
+    h3 {
         width: calc(100% - 195px);
         font-size: 18px;
         line-height: 23.4px;
@@ -262,18 +277,13 @@ main {
     }
 }
 @media (max-width: 800px) {
-    .categories__product-list {
-        grid-template-columns: 1fr;
-    }
-}
-@media (max-width: 580px) {
     .categories__product {
         background: 
-        linear-gradient(86.02deg, #0D748B -46px, #1A0B73 46px,  transparent 46px),
-        radial-gradient(100px at -16px center,#1A0B73 100px, transparent);
+        linear-gradient(86.02deg, $linear-gradient-color-1 -46px, $linear-gradient-color-2 46px,  transparent 46px),
+        radial-gradient(100px at -16px center,$linear-gradient-color-2 100px, transparent);
         height: 140px;
         padding: 20px 20px 0 0;
-        h2 {
+        h3 {
             font-size: 16px;
             width: calc(100% - 140px);
             line-height: 20.8px;
@@ -284,37 +294,36 @@ main {
         top: 19px;
         left: 20px;
     }
-    .categories h1 {
-        font-size: 22px;
-    }
     .categories__product-list {
         margin-top: 30px;
     }
 }
-@media (max-width: 320px) {
-    .categories__product .to-catalog-black {
-        right: calc(100% - 235px);
+@media (max-width: 684px) {
+    .categories__title {
+        font-size: $title-size-mobile;
+    }
+    .categories__product-list {
+        grid-template-columns: 1fr;
     }
 }
 .advantages {
-    box-shadow: 0 4px 20px 0 #00075E1A;
+    box-shadow: $shadow;
     background:
     url("/img/advantages_bg.svg"),
-    radial-gradient(98.19% 130.91% at -8.58% -1.44%, #42E8E0 0%, #40DDDA 1.57%, #3AAEC0 9.21%, #3484A9 17.3%, #2F6195 25.73%, #2B4486 34.58%, #282E79 44%, #180564 72.26%, transparent 72.26%),
-    radial-gradient(98.19% 130.91% at 108.58% 107.44%, #42E8E0 0%, #40DDDA 1.57%, #3AAEC0 9.21%, #3484A9 17.3%, #2F6195 25.73%, #2B4486 34.58%, #282E79 44%, #180564 72.26%);
+    radial-gradient(98.19% 130.91% at -8.58% -1.44%, $radial-gradient-color-0, $radial-gradient-color-1 , $radial-gradient-color-2, $radial-gradient-color-3, $radial-gradient-color-4, $radial-gradient-color-5, $radial-gradient-color-6, $radial-gradient-color-7, transparent 72.26%),
+    radial-gradient(98.19% 130.91% at 108.58% 107.44%, $radial-gradient-color-0, $radial-gradient-color-1 , $radial-gradient-color-2, $radial-gradient-color-3, $radial-gradient-color-4, $radial-gradient-color-5, $radial-gradient-color-6, $radial-gradient-color-7);
     height: 374px;
-    margin-bottom: 10px;
-    margin-top: 80px;
+    margin: 80px 0 10px;
     border-radius: 10px;
     position: relative;
     padding: 50px 10px 0 60px;
-    h1 {
-        font-size: 36px;
-        font-weight: 800;
-        width: 340px;
-        text-transform: uppercase;
-        color: #FFF;
-    }
+}
+.advantages__title {
+    font-size: $title-size;
+    font-weight: 800;
+    width: 340px;
+    text-transform: uppercase;
+    color: #FFF;
 }
 .advantages__img {
     position: absolute;
@@ -340,31 +349,21 @@ main {
     h3 {
         font-size: 16px;
         font-weight: 600;
-        color: #FFFFFF;
+        color: $color-white;
+        width: 180px;
     }
 }
 @media (max-width: 1080px) {
     .advantages {
-        padding: 50px 10px 0 40px;
-    }
-    .advantages__img {
-        left: 35px;
-    }
-    .advantages__block {
-        width: calc(100% - 380px);
-    }
-}
-@media (max-width: 980px) {
-    .advantages {
         background:
-                url("/img/advantages_bg_mobile.svg") no-repeat,
-                radial-gradient(98.19% 130.91% at -8.58% -1.44%, #42E8E0 0%, #40DDDA 1.57%, #3AAEC0 9.21%, #3484A9 17.3%, #2F6195 25.73%, #2B4486 34.58%, #282E79 44%, #180564 72.26%, transparent 72.26%),
-                radial-gradient(98.19% 130.91% at 108.58% 107.44%, #42E8E0 0%, #40DDDA 1.57%, #3AAEC0 9.21%, #3484A9 17.3%, #2F6195 25.73%, #2B4486 34.58%, #282E79 44%, #180564 72.26%);
+                url("/img/advantages_bg_mobile.svg"),
+                radial-gradient(98.19% 80.91% at -8.58% -1.44%, $radial-gradient-color-0, $radial-gradient-color-1 , $radial-gradient-color-2, $radial-gradient-color-3, $radial-gradient-color-4, $radial-gradient-color-5, $radial-gradient-color-6, $radial-gradient-color-7, transparent 72.26%),
+                radial-gradient(98.19% 80.91% at 118.58% 57.44%, $radial-gradient-color-0, $radial-gradient-color-1 , $radial-gradient-color-2, $radial-gradient-color-3, $radial-gradient-color-4, $radial-gradient-color-5, $radial-gradient-color-6, $radial-gradient-color-7);
         padding: 30px;
-        h1 {
-            margin-bottom: 30px;
-        }
         height: 678px;
+    }
+    .advantages__title {
+        margin-bottom: 30px;
     }
     .advantages__block {
         position: unset;
@@ -387,12 +386,10 @@ main {
     }
 }
 @media (max-width: 480px) {
-    .advantages {
-        h1 {
-            font-size: 22px;
-            font-weight: 800;
-            width: auto;
-        }
+    .advantages__title {
+        font-size: $title-size-mobile;
+        font-weight: 800;
+        width: 240px;
     }
     .advantages__block {
         grid-template-columns: 1fr;
@@ -406,15 +403,23 @@ main {
             margin: 0;
         }
     }
+    .advantages {
+        background:
+                url("/img/advantages_bg_mobile.svg"),
+                radial-gradient(420px 420px at -8.58% -1.44%, $radial-gradient-color-0, $radial-gradient-color-1 , $radial-gradient-color-2, $radial-gradient-color-3, $radial-gradient-color-4, $radial-gradient-color-5, $radial-gradient-color-6, $radial-gradient-color-7, transparent 72.26%),
+                radial-gradient(420px 420px at 108.58% 57.44%, $radial-gradient-color-0, $radial-gradient-color-1 , $radial-gradient-color-2, $radial-gradient-color-3, $radial-gradient-color-4, $radial-gradient-color-5, $radial-gradient-color-6, $radial-gradient-color-7);
+    }
 }
 .hits {
     position: relative;
     height: 490px;
-    margin: 80px 0 10px 0;
-    h1 {
-        font-size: 36px;
+    margin: 80px 0 10px;
+    overflow-y: clip;
+    h2 {
+        font-size: $title-size;
         font-weight: 800;
         text-transform: uppercase;
+        margin-bottom: 40px;
     }
     .pagination {
         right: 50%;
@@ -424,12 +429,14 @@ main {
 }
 .hits__block {
     display: flex;
-    gap: 20px;
-    margin-top: 40px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    row-gap: 45px;
+    height: 360px;
 }
 .hits__product {
-    box-shadow: 0 4px 20px 0 #00075E1A;
-    background-color: #FFFFFF;
+    box-shadow: $shadow;
+    background-color: $color-white;
     border-radius: 10px;
     padding: 30px 20px 30px 20px;
     position: relative;
@@ -437,6 +444,7 @@ main {
     width: 220px;
     display: flex;
     flex-direction: column;
+    margin: 0 5px;
     .button-gradient {
         margin: 0 auto;
     }
@@ -447,14 +455,14 @@ main {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    margin: 10px 0 6px 0;
+    margin: 10px 0 6px;
 }
 .hits__cart {
     width: 40px;
     height: 40px;
     border: 0;
     border-radius: 50%;
-    background-color: #F0F5FB;
+    background-color: $body-gb;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -468,6 +476,7 @@ main {
     font-weight: 600;
     margin-left: 14px;
     position: relative;
+    color: #9B9B9B;
     &::before {
         position: absolute;
         content: '';
@@ -485,16 +494,20 @@ main {
     align-items: center;
     justify-content: space-between;
     margin-bottom: 10px;
-    h2 {
+    h3 {
         font-size: 14px;
         font-weight: 700;
         color: #303239;
     }
-    del {
+}
+.hits__price-discount {
+    display: flex;
+    align-items: center;
+    p {
         font-size: 10px;
         color: #9B9B9B;
         text-decoration: line-through;
-        margin-right: 13px;
+        margin-left: 8px;
     }
 }
 .hits__label {
@@ -502,14 +515,14 @@ main {
     top: 15px;
     left: 15px;
     height: 22px;
-    background-color: #F0F5FB;
+    background-color: $body-gb;
     border-radius: 4px;
-    span {
+    p {
         text-transform: uppercase;
-        padding: 0 10px;
+        padding: 3px 10px;
         font-size: 12px;
         font-weight: 800;
-        background: linear-gradient(73.56deg, #0D748B -10.13%, #1A0B73 75.49%);
+        background: linear-gradient(73.56deg, $linear-gradient-color-1 -10.13%, $linear-gradient-color-2 75.49%);
         -webkit-background-clip: text;
         background-clip: text;
         -webkit-text-fill-color: transparent;
@@ -520,4 +533,91 @@ main {
     top: 15px;
     right: 15px;
     width: 22px;
+}
+.hits__show-more {
+    display: none;
+    position: absolute;
+    color: #18154B;
+    border: 0;
+    border-bottom: #18154B dotted 1px;
+    background: none;
+    right: 50%;
+    bottom: 0;
+    transform: translate(50%, 0);
+    font-size: 14px;
+    font-weight: 600;
+}
+@media (max-width: 980px) {
+    .hits {
+        height: auto;
+        overflow: unset;
+        padding-bottom: 40px;
+    }
+    .hits__block {
+        height: auto;
+        gap: 10px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    .hits__product {
+        margin: 0;
+        width: 100%;
+        .button-gradient {
+            width: 100%;
+        }
+    }
+    .pagination {
+        display: none;
+    }
+}
+@media (max-width: 710px) {
+    .hits__block {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+@media (max-width: 470px) {
+    .hits h2 {
+        font-size: $title-size-mobile;
+        margin-bottom: 30px;
+    }
+    .hits__product {
+        height: 270px;
+        padding: 40px 15px 15px 15px;
+        width: calc(50vw - 15px);
+    }
+    .hits__product-img {
+        width: 100px;
+        height: 100px;
+    }
+    .hits__product-name {
+        font-size: 12px;
+        margin: 2px 0 6px;
+    }
+    .hits__price-discount {
+        display: unset;
+        p {
+            margin: 0;
+        }
+    }
+    .hits__label {
+        height: 20px;
+        p {
+            font-size: 10px;
+        }
+    }
+    .hits__favourite {
+        height: 20px;
+        width: 20px;
+    }
+    .hits__cart {
+        width: 34px;
+        height: 34px;
+        img {
+            height: 16px;
+            width: 16px;
+        }
+    }
+    .button-gradient {
+        font-size: 10px;
+    }
 }
