--- a/style/index.scss
+++ b/style/index.scss
@@ -41,11 +41,13 @@ main {
 .lock {
     overflow-y: hidden;
 }
+// 1180, 1080, 980, 900, 800, 710, 580, 480
+// 710, 580 чаще всего
 .banner {
     display: grid;
     grid-template-columns: 7.8fr 3.8fr;
     gap: 20px;
-    margin: 40px 0 10px;
+    margin-top: 40px;
     h3 {
         font-size: 18px;
         font-weight: 600;
@@ -206,7 +208,7 @@ main {
     }
 }
 .categories {
-    margin: 80px 0 10px 0;
+    margin-top: 80px;
     h2 {
         font-size: $title-size;
         font-weight: 800;
@@ -283,7 +285,7 @@ main {
         }
     }
 }
-@media (max-width: 684px) {
+@media (max-width: 710px) {
     .categories {
         h2 {
             font-size: $title-size-mobile;
@@ -300,7 +302,7 @@ main {
     radial-gradient(98.19% 130.91% at -8.58% -1.44%, $radial-gradient-color-0, $radial-gradient-color-1 , $radial-gradient-color-2, $radial-gradient-color-3, $radial-gradient-color-4, $radial-gradient-color-5, $radial-gradient-color-6, $radial-gradient-color-7, transparent 72.26%),
     radial-gradient(98.19% 130.91% at 108.58% 107.44%, $radial-gradient-color-0, $radial-gradient-color-1 , $radial-gradient-color-2, $radial-gradient-color-3, $radial-gradient-color-4, $radial-gradient-color-5, $radial-gradient-color-6, $radial-gradient-color-7);
     height: 374px;
-    margin: 80px 0 10px;
+    margin-top: 80px;
     border-radius: 10px;
     position: relative;
     padding: 50px 10px 0 60px;
@@ -400,7 +402,7 @@ main {
 .hits {
     position: relative;
     height: 490px;
-    margin: 80px 0 10px;
+    margin-top: 80px;
     overflow-y: clip;
     h2 {
         font-size: $title-size;
@@ -418,6 +420,7 @@ main {
         flex-wrap: wrap;
         justify-content: space-between;
         row-gap: 55px;
+        column-gap: 10px;
         height: 360px;
     }
     &__product {
@@ -430,7 +433,6 @@ main {
         width: 220px;
         display: flex;
         flex-direction: column;
-        margin: 0 5px;
         .button-gradient {
             margin: 0 auto;
         }
@@ -565,7 +567,7 @@ main {
         grid-template-columns: 1fr 1fr;
     }
 }
-@media (max-width: 470px) {
+@media (max-width: 480px) {
     .hits {
         h2 {
             font-size: $title-size-mobile;
@@ -664,7 +666,7 @@ main {
 }
 @media (max-width: 980px) {
     .about {
-        display: unset;
+        display: block;
         margin-top: 60px;
         h2 {
             margin-bottom: 30px;
@@ -694,6 +696,9 @@ main {
             p {
                 max-width: none;
             }
+        }
+        h2 {
+            font-size: $title-size-mobile;
         }
     }
 }
@@ -763,6 +768,81 @@ main {
         }
         h3 {
             font-size: 14px;
+        }
+    }
+}
+.contacts {
+    display: grid;
+    grid-template-columns: 300px 1fr;
+    justify-items: flex-end;
+    margin-top: 80px;
+    gap: 20px;
+    h2 {
+        color: $title-color;
+        font-size: $title-size;
+        font-weight: 800;
+        margin-bottom: 40px;
+        text-transform: uppercase;
+    }
+    &__point {
+        display: flex;
+        margin-bottom: 10px;
+        gap: 10px;
+        align-items: flex-start;
+        color: $text-color-black;
+        img {
+            margin-top: 6px;
+        }
+    }
+    &__social {
+        margin-top: 40px;
+        display: flex;
+        gap: 20px;
+    }
+    &__map-block {
+        position: relative;
+    }
+    &__map {
+        border-radius: 10px;
+        box-shadow: 0 4px 20px 0 #00075E1A;
+        object-fit: cover;
+        width: 100%;
+        height: 365px;
+    }
+    &__map-location {
+        position: absolute;
+        right: calc(50% - 34px);
+        top: 115px;
+    }
+}
+@media (max-width: 710px) {
+    .contacts {
+        display: block;
+        margin-top: 60px;
+        h2 {
+            margin-bottom: 30px;
+        }
+        &__map-block {
+            margin-top: 30px;
+        }
+        &__social {
+            margin-top: 30px;
+        }
+    }
+}
+@media (max-width: 580px) {
+    .contacts {
+        h2 {
+            font-size: $title-size-mobile;
+        }
+        h3 {
+            font-size: 16px;
+        }
+        &__social img {
+            width: 36px;
+        }
+        &__point img {
+            margin-top: 3px;
         }
     }
 }
