--- a/style/blocks/_elements.scss
+++ b/style/blocks/_elements.scss
@@ -59,7 +59,7 @@
     font-size: 16px;
     white-space: nowrap;
 }
-.user__contacts {
+.user-contacts {
     border: 1px solid #F3F3F3B2;
     background: rgba(243, 243, 243, 0.3);
     border-radius: 50px;
