--- a/style/blocks/_footer.scss
+++ b/style/blocks/_footer.scss
@@ -6,98 +6,100 @@
         align-self: center;
         justify-self: right;
     }
-    h3 {
+    &__sub-logo {
         color: #B8B8B8;
         font-size: 15px;
         font-weight: 400;
     }
-}
-.footer__container {
-    max-width: 1200px;
-    height: 100%;
-    display: grid;
-    margin: auto;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 50px 1fr;
-    grid-gap: 6px 0;
-    padding: 60px 10px;
-}
-.footer__list-title {
-    color: #B8B8B8;
-    text-transform: uppercase;
-    font-size: 16px;
-    font-weight: 700;
-    align-self: center;
-}
-.footer__links-block {
-    align-self: end;
-    text-align: right;
-    font-size: 15px;
-    font-weight: 400;
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-    a {
+    &__container {
+        max-width: 1200px;
+        height: 100%;
+        display: grid;
+        margin: auto;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 50px 1fr;
+        grid-gap: 6px 0;
+        padding: 60px 10px;
+    }
+    &__list-title {
+        color: #B8B8B8;
+        text-transform: uppercase;
+        font-size: 16px;
+        font-weight: 700;
+        align-self: center;
+    }
+    &__links-block {
+        align-self: end;
+        text-align: right;
+        font-size: 15px;
+        font-weight: 400;
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+    }
+    &__links-text {
         color: #B8B8B8;
     }
-}
-.footer__list-block {
-    display: inline-flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 8px;
-    font-size: 15px;
-    font-weight: 400;
-    a {
+    &__list-block {
+        display: inline-flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 8px;
+        font-size: 15px;
+        font-weight: 400;
+    }
+    &__list-text {
         color: #FFF;
     }
-}
-.footer__logo {
-    color: #FFF;
-    font-size: 22px;
-    font-weight: 800;
-    align-self: center;
+    &__logo {
+        color: #FFF;
+        font-size: 22px;
+        font-weight: 800;
+        align-self: center;
+    }
 }
 @media (max-width: 980px) {
-    .footer__container {
-        max-width: none;
-        display: grid;
-        margin: 0;
-        padding: 40px 4px 40px 30px;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 50px 50px 1fr 40px 40px;
-        & *:nth-child(1):not(a) { order: 1;}
-        & *:nth-child(2):not(a) { order: 3;}
-        & *:nth-child(3):not(a) { order: 4;}
-        & *:nth-child(4):not(a) { order: 2; justify-self: left;}
-        & *:nth-child(5):not(a) { order: 7; grid-column: span 2; align-self: flex-end;}
-        & *:nth-child(6):not(a) { order: 5;}
-        & *:nth-child(7):not(a) { order: 6;}
-        & *:nth-child(8):not(a) { order: 8; text-align: left;}
-    }
     .footer {
         height: auto;
+        &__container {
+            max-width: none;
+            display: grid;
+            margin: 0;
+            padding: 40px 4px 40px 30px;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 50px 50px 1fr 40px 40px;
+            & *:nth-child(1):not(a) { order: 1;}
+            & *:nth-child(2):not(a) { order: 3;}
+            & *:nth-child(3):not(a) { order: 4;}
+            & *:nth-child(4):not(a) { order: 2; justify-self: left;}
+            & *:nth-child(5):not(a) { order: 7; grid-column: span 2; align-self: flex-end;}
+            & *:nth-child(6):not(a) { order: 5;}
+            & *:nth-child(7):not(a) { order: 6;}
+            & *:nth-child(8):not(a) { order: 8; text-align: left;}
+        }
     }
 }
 @media (max-width: 580px) {
-    .footer__container {
-        display: flex;
-        flex-direction: column;
-        gap: 0;
-        padding: 0 4px 40px 30px;
-        & *:nth-child(1):not(a) { order: 1; align-self: flex-start;}
-        & *:nth-child(2):not(a) { order: 3; align-self: flex-start;}
-        & *:nth-child(3):not(a) { order: 5; align-self: flex-start;}
-        & *:nth-child(4):not(a) { order: 2; align-self: flex-start;}
-        & *:nth-child(5):not(a) { order: 8; align-self: flex-start;}
-        & *:nth-child(6):not(a) { order: 4;}
-        & *:nth-child(7):not(a) { order: 6;}
-        & *:nth-child(8):not(a) { order: 7; align-self: flex-start;}
-        h3 {
+    .footer {
+        &__container {
+            display: flex;
+            flex-direction: column;
+            gap: 0;
+            padding: 0 4px 40px 30px;
+            & *:nth-child(1):not(a) { order: 1; align-self: flex-start;}
+            & *:nth-child(2):not(a) { order: 3; align-self: flex-start;}
+            & *:nth-child(3):not(a) { order: 5; align-self: flex-start;}
+            & *:nth-child(4):not(a) { order: 2; align-self: flex-start;}
+            & *:nth-child(5):not(a) { order: 8; align-self: flex-start;}
+            & *:nth-child(6):not(a) { order: 4;}
+            & *:nth-child(7):not(a) { order: 6;}
+            & *:nth-child(8):not(a) { order: 7; align-self: flex-start;}
+        }
+        &__sub-logo {
             margin-top: 20px;
         }
-    }
-    .footer__links-block, .footer__logo, .footer__list-title {
-        margin: 40px 0 20px 0;
+        &__links-block, &__logo, &__list-title {
+            margin: 40px 0 20px 0;
+        }
     }
 }
