--- a/style/index.css
+++ b/style/index.css
@@ -63,7 +63,7 @@
   white-space: nowrap;
 }
 
-.user__contacts {
+.user-contacts {
   border: 1px solid rgba(243, 243, 243, 0.6980392157);
   background: rgba(243, 243, 243, 0.3);
   border-radius: 50px;
@@ -74,18 +74,18 @@
   width: 240px;
   height: 50px;
 }
-.user__contacts:active {
+.user-contacts:active {
   background: rgba(243, 243, 243, 0.7);
   border: 1px solid #F3F3F3;
 }
-.user__contacts:invalid {
+.user-contacts:invalid {
   background: rgba(243, 243, 243, 0.5);
   border: 1px solid #FF1414;
 }
-.user__contacts::placeholder {
+.user-contacts::placeholder {
   color: #F3F3F3;
 }
-.user__contacts:focus-visible {
+.user-contacts:focus-visible {
   outline: none;
 }
 
@@ -178,12 +178,10 @@
   top: 0;
   z-index: 1;
 }
-
 .header__block-blue {
   background-color: #18154B;
   height: 46px;
 }
-
 .header__container {
   max-width: 1200px;
   padding: 0 10px;
@@ -193,7 +191,6 @@
   align-items: center;
   justify-content: space-between;
 }
-
 .header__contacts {
   display: flex;
   justify-content: space-between;
@@ -203,27 +200,24 @@
   color: #F0F5FB;
   display: flex;
 }
-.header__contacts a img {
-  margin-right: 9px;
-}
-.header__contacts a h3 {
+.header__contact-text {
   font-size: 14px;
   font-weight: 400;
 }
-
+.header__contact-img {
+  margin-right: 9px;
+}
 .header__media {
   display: flex;
   width: 70px;
   justify-content: space-between;
 }
-
 .header__block-white {
   background-color: #FFFFFF;
   height: 70px;
   box-shadow: 0 4px 20px 0 rgba(0, 7, 94, 0.1019607843);
 }
-
-h1 {
+.header__title {
   font-weight: 800;
   font-size: 20px;
   background: linear-gradient(73.56deg, #0D748B -10.13%, #1A0B73 75.49%);
@@ -232,36 +226,33 @@ h1 {
   -webkit-text-fill-color: transparent;
   white-space: nowrap;
 }
-
 .header__navigation {
   display: flex;
   width: 574px;
   justify-content: space-between;
 }
-.header__navigation h3, .header__navigation a {
+.header__navigate-link {
   font-size: 16px;
   font-weight: 400;
   color: #303239;
 }
-.header__navigation h3:hover, .header__navigation a:hover {
+.header__navigate-link:hover {
   color: rgba(48, 50, 57, 0.6980392157);
   cursor: pointer;
 }
-
-.header__catalog h3 {
+.header__catalog-btn {
   float: left;
   margin-right: 8px;
 }
-.header__catalog img {
+.header__catalog-triangle {
   margin-bottom: 2px;
 }
-
 .header__menu {
   display: flex;
   width: 140px;
   justify-content: space-between;
 }
-.header__menu button {
+.header__menu-btn {
   width: 40px;
   height: 40px;
   border: 0;
@@ -270,13 +261,13 @@ h1 {
   position: relative;
   margin-right: 7px;
 }
-.header__menu button img {
+.header__menu-btn img {
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
 }
-.header__menu button span {
+.header__menu-btn span {
   position: absolute;
   font-size: 10px;
   font-weight: 500;
@@ -297,7 +288,6 @@ h1 {
   width: 100%;
   display: none;
 }
-
 .mobile-header__container {
   padding: 0 10px;
   background: #FFF;
@@ -306,8 +296,7 @@ h1 {
   display: flex;
   height: 56px;
 }
-
-h1 {
+.mobile-header__title {
   font-weight: 800;
   font-size: 18px;
   background: linear-gradient(73.56deg, #0D748B -10.13%, #1A0B73 75.49%);
@@ -316,28 +305,26 @@ h1 {
   -webkit-text-fill-color: transparent;
   white-space: nowrap;
 }
-
 .mobile-header__top-navigation {
   display: flex;
   width: calc(100% - 250px);
   justify-content: space-evenly;
 }
-.mobile-header__top-navigation a {
+.mobile-header__navigate-link {
   font-size: 16px;
   font-weight: 400;
   color: #303239;
 }
-.mobile-header__top-navigation a:hover {
+.mobile-header__navigate-link:hover {
   color: rgba(48, 50, 57, 0.6980392157);
   cursor: pointer;
 }
-
 .mobile-header__menu {
   display: flex;
   width: 140px;
   justify-content: space-between;
 }
-.mobile-header__menu button {
+.mobile-header__menu-btn {
   width: 36px;
   height: 36px;
   border: 0;
@@ -346,14 +333,14 @@ h1 {
   position: relative;
   margin-right: 2px;
 }
-.mobile-header__menu button img {
+.mobile-header__menu-btn img {
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
   width: 18px;
 }
-.mobile-header__menu button span {
+.mobile-header__menu-btn span {
   position: absolute;
   font-size: 7.5px;
   font-weight: 500;
@@ -366,6 +353,96 @@ h1 {
   top: -2px;
   right: -2px;
   z-index: 1;
+}
+.mobile-header__full-menu {
+  background-color: #FFFFFF;
+  display: none;
+  flex-direction: column;
+  padding: 10px 10px 40px 10px;
+}
+.mobile-header__navigation {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  width: 100%;
+  margin: 60px 0 30px 0;
+}
+.mobile-header__navigation .mobile-header__navigate-link {
+  margin-top: 10px;
+  padding-bottom: 10px;
+  border-bottom: #F0F5FB solid 1px;
+}
+.mobile-header__catalog-block {
+  position: relative;
+}
+.mobile-header__catalog-triangle {
+  position: absolute;
+  right: 0;
+  top: 40%;
+  transform: translate(-50%, 0);
+}
+.mobile-header__search-block {
+  position: relative;
+}
+.mobile-header__search-input {
+  position: absolute;
+  background-color: #F0F5FB;
+  padding: 0 15px;
+  border: 0;
+  border-radius: 50px;
+  width: 100%;
+  height: 40px;
+  font-size: 14px;
+  font-weight: 400;
+  color: #303239;
+}
+.mobile-header__search-input:focus-visible {
+  outline: #F3F3F3 solid 1px;
+}
+.mobile-header__search-btn {
+  position: absolute;
+  right: 6px;
+  top: 0;
+  background-color: rgba(255, 255, 255, 0);
+  border-radius: 50px;
+  width: 40px;
+  height: 40px;
+  border: 0;
+}
+.mobile-header__search-btn img {
+  height: 18px;
+}
+.mobile-header__contacts {
+  width: 100%;
+}
+.mobile-header__contact {
+  color: #303239;
+  display: flex;
+  gap: 10px;
+  margin-bottom: 15px;
+}
+.mobile-header__contact-text {
+  font-size: 14px;
+  font-weight: 400;
+}
+.mobile-header__call {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.mobile-header__media {
+  display: flex;
+  gap: 10px;
+}
+.mobile-header__media a {
+  height: 30px;
+}
+.mobile-header_open {
+  background-color: rgba(24, 21, 75, 0.8);
+  height: 100vh;
+}
+.mobile-header_open .mobile-header__full-menu {
+  display: flex;
 }
 
 @media (max-width: 1080px) {
@@ -386,108 +463,6 @@ h1 {
     display: none;
   }
 }
-.mobile-header__full-menu {
-  background-color: #FFFFFF;
-  display: none;
-  flex-direction: column;
-  padding: 10px 10px 40px 10px;
-}
-.mobile-header__full-menu .mobile-header__navigation {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-  width: 100%;
-  margin: 60px 0 30px 0;
-}
-.mobile-header__full-menu .mobile-header__navigation h3, .mobile-header__full-menu .mobile-header__navigation a {
-  font-size: 16px;
-  font-weight: 400;
-  color: #303239;
-  margin-top: 10px;
-  padding-bottom: 10px;
-  border-bottom: #F0F5FB solid 1px;
-}
-.mobile-header__full-menu .mobile-header__navigation h3:hover, .mobile-header__full-menu .mobile-header__navigation a:hover {
-  color: rgba(48, 50, 57, 0.6980392157);
-  cursor: pointer;
-}
-.mobile-header__full-menu .mobile-header__navigation .mobile-header__catalog {
-  position: relative;
-}
-.mobile-header__full-menu .mobile-header__navigation .mobile-header__catalog img {
-  position: absolute;
-  right: 0;
-  top: 40%;
-  transform: translate(-50%, 0);
-}
-
-.mobile-header__search {
-  position: relative;
-}
-.mobile-header__search input {
-  position: absolute;
-  background-color: #F0F5FB;
-  padding: 0 15px;
-  border: 0;
-  border-radius: 50px;
-  width: 100%;
-  height: 40px;
-  font-size: 14px;
-  font-weight: 400;
-  color: #303239;
-}
-.mobile-header__search input:focus-visible {
-  outline: #F3F3F3 solid 1px;
-}
-.mobile-header__search button {
-  position: absolute;
-  right: 6px;
-  top: 0;
-  background-color: rgba(255, 255, 255, 0);
-  border-radius: 50px;
-  width: 40px;
-  height: 40px;
-  border: 0;
-}
-.mobile-header__search button img {
-  height: 18px;
-}
-
-.mobile-header__contacts {
-  width: 100%;
-}
-.mobile-header__contacts a {
-  color: #303239;
-  display: flex;
-  gap: 10px;
-  margin-bottom: 15px;
-}
-.mobile-header__contacts a h3 {
-  font-size: 14px;
-  font-weight: 400;
-}
-
-.mobile-header__call {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.mobile-header__call .mobile-header__media {
-  display: flex;
-  gap: 10px;
-}
-.mobile-header__call .mobile-header__media a {
-  height: 30px;
-}
-
-.mobile-header_open {
-  background-color: rgba(24, 21, 75, 0.8);
-  height: 100vh;
-}
-.mobile-header_open .mobile-header__full-menu {
-  display: flex;
-}
-
 .footer {
   background-color: #18154B;
   height: 336px;
@@ -497,12 +472,11 @@ h1 {
   align-self: center;
   justify-self: right;
 }
-.footer h3 {
+.footer__sub-logo {
   color: #B8B8B8;
   font-size: 15px;
   font-weight: 400;
 }
-
 .footer__container {
   max-width: 1200px;
   height: 100%;
@@ -513,7 +487,6 @@ h1 {
   grid-gap: 6px 0;
   padding: 60px 10px;
 }
-
 .footer__list-title {
   color: #B8B8B8;
   text-transform: uppercase;
@@ -521,7 +494,6 @@ h1 {
   font-weight: 700;
   align-self: center;
 }
-
 .footer__links-block {
   align-self: end;
   text-align: right;
@@ -531,10 +503,9 @@ h1 {
   flex-direction: column;
   gap: 8px;
 }
-.footer__links-block a {
+.footer__links-text {
   color: #B8B8B8;
 }
-
 .footer__list-block {
   display: inline-flex;
   flex-direction: column;
@@ -543,10 +514,9 @@ h1 {
   font-size: 15px;
   font-weight: 400;
 }
-.footer__list-block a {
+.footer__list-text {
   color: #FFF;
 }
-
 .footer__logo {
   color: #FFF;
   font-size: 22px;
@@ -555,6 +525,9 @@ h1 {
 }
 
 @media (max-width: 980px) {
+  .footer {
+    height: auto;
+  }
   .footer__container {
     max-width: none;
     display: grid;
@@ -590,9 +563,6 @@ h1 {
   .footer__container *:nth-child(8):not(a) {
     order: 8;
     text-align: left;
-  }
-  .footer {
-    height: auto;
   }
 }
 @media (max-width: 580px) {
@@ -632,7 +602,7 @@ h1 {
     order: 7;
     align-self: flex-start;
   }
-  .footer__container h3 {
+  .footer__sub-logo {
     margin-top: 20px;
   }
   .footer__links-block, .footer__logo, .footer__list-title {
@@ -671,10 +641,18 @@ main {
   gap: 20px;
   margin-top: 40px;
 }
-.banner h3 {
+.banner__sub-title {
   font-size: 18px;
   font-weight: 600;
   color: #FFFFFF;
+}
+.banner__title {
+  font-size: 38px;
+  font-weight: 800;
+  color: #FFFFFF;
+  width: 341px;
+  margin-bottom: 20px;
+  text-transform: uppercase;
 }
 .banner__guarantee {
   box-shadow: 0 4px 20px 0 rgba(0, 7, 94, 0.1019607843);
@@ -684,19 +662,10 @@ main {
   position: relative;
   height: 440px;
 }
-.banner__guarantee h2 {
-  font-size: 38px;
-  font-weight: 800;
-  color: #FFFFFF;
-  width: 341px;
-  margin-bottom: 20px;
-  text-transform: uppercase;
-  line-height: 51.83px;
-}
 .banner__guarantee button {
   margin-top: 30px;
 }
-.banner__guarantee img {
+.banner__miner-img {
   position: absolute;
   right: 45px;
   top: 95px;
@@ -721,19 +690,18 @@ main {
   width: 231px;
   margin-bottom: 10px;
   text-transform: uppercase;
-  line-height: 38.19px;
 }
 .banner__bitcoin {
   position: absolute;
   left: 8px;
   bottom: 23px;
 }
-.banner__sub-title {
+.banner__sub-title-block {
   display: flex;
   align-items: center;
   gap: 20px;
 }
-.banner__sub-title h2 {
+.banner__sub-title-percent {
   font-size: 56px;
   font-weight: 700;
 }
@@ -744,7 +712,7 @@ main {
     gap: 10px;
     margin-top: 30px;
   }
-  .banner__sub-title {
+  .banner__sub-title-block {
     gap: 10px;
     flex-direction: column;
     align-items: flex-start;
@@ -763,13 +731,12 @@ main {
   .banner {
     margin-top: 20px;
   }
-  .banner__sub-title h2 {
+  .banner__sub-title-percent {
     font-size: 38px;
   }
   .banner__discount-title {
     font-size: 20px;
     width: 166px;
-    line-height: 27.28px;
   }
   .banner__discount {
     padding: 30px 0 0 30px;
@@ -778,7 +745,7 @@ main {
   .banner__discount .to-catalog-white {
     bottom: 20px;
   }
-  .banner__discount h3 {
+  .banner__discount .banner__sub-title {
     font-size: 14px;
   }
   .banner__bitcoin {
@@ -790,7 +757,7 @@ main {
     height: 400px;
     background: url("/img/microciruit.svg") no-repeat, radial-gradient(298px 281px at calc(100% + 73px) 65%, rgba(52, 110, 164, 0.2) 0, rgba(52, 110, 164, 0.2) 100%, transparent), linear-gradient(73.56deg, #0D748B -10.13%, #1A0B73 75.49%);
   }
-  .banner__guarantee img {
+  .banner__miner-img {
     right: 16px;
     bottom: 36px;
     top: unset;
@@ -808,26 +775,25 @@ main {
   .banner__guarantee {
     background: url("/img/microciruit_mobile.svg") no-repeat top -14px left 0/353px 368px, radial-gradient(166px 166px at calc(100% + 90px) calc(100% - 128px), rgba(52, 110, 164, 0.2) 0, rgba(52, 110, 164, 0.2) 100%, transparent), linear-gradient(73.56deg, #0D748B -10.13%, #1A0B73 75.49%);
   }
-  .banner__guarantee h2 {
-    font-size: 22px;
-    line-height: 30px;
-    max-width: calc(100vw - 100px);
-    margin-bottom: 10px;
-  }
-  .banner__guarantee h3 {
+  .banner__guarantee .banner__sub-title {
     font-size: 16px;
   }
   .banner__guarantee .white-button {
     margin-top: 18px;
   }
-  .banner__guarantee img {
+  .banner__title {
+    font-size: 22px;
+    max-width: calc(100vw - 100px);
+    margin-bottom: 10px;
+  }
+  .banner__miner-img {
     width: 146px;
   }
 }
 .categories {
   margin-top: 80px;
 }
-.categories h2 {
+.categories__title {
   font-size: 36px;
   font-weight: 800;
   color: #18154B;
@@ -856,10 +822,9 @@ main {
   right: 65px;
   bottom: 30px;
 }
-.categories__product h3 {
+.categories__product-name {
   width: calc(100% - 195px);
   font-size: 18px;
-  line-height: 23.4px;
   font-weight: 600;
 }
 .categories__product-img {
@@ -883,10 +848,9 @@ main {
     height: 140px;
     padding: 20px 20px 0 0;
   }
-  .categories__product h3 {
+  .categories__product-name {
     font-size: 16px;
     width: calc(100% - 140px);
-    line-height: 20.8px;
   }
   .categories__product-img {
     width: 110px;
@@ -898,9 +862,6 @@ main {
   }
 }
 @media (max-width: 710px) {
-  .categories h2 {
-    font-size: 22px;
-  }
   .categories__product-list {
     grid-template-columns: 1fr;
   }
@@ -914,7 +875,7 @@ main {
   position: relative;
   padding: 50px 10px 0 60px;
 }
-.advantages h2 {
+.advantages__title {
   font-size: 36px;
   font-weight: 800;
   width: 340px;
@@ -936,12 +897,12 @@ main {
   top: 50px;
   right: 0;
 }
-.advantages__item img {
+.advantages__item-img {
   margin-bottom: 4px;
   border-radius: 50%;
   box-shadow: 0 4px 40px 0 rgba(0, 6, 84, 0.9019607843);
 }
-.advantages__item h3 {
+.advantages__item-text {
   font-size: 16px;
   font-weight: 600;
   color: #FFFFFF;
@@ -981,11 +942,6 @@ main {
   .advantages {
     background: url("/img/advantages_bg_mobile.svg"), radial-gradient(420px 420px at -8.58% -1.44%, #42E8E0 0%, #40DDDA 1.57%, #3AAEC0 9.21%, #3484A9 17.3%, #2F6195 25.73%, #2B4486 34.58%, #282E79 44%, #180564 72.26%, transparent 72.26%), radial-gradient(420px 420px at 108.58% 57.44%, #42E8E0 0%, #40DDDA 1.57%, #3AAEC0 9.21%, #3484A9 17.3%, #2F6195 25.73%, #2B4486 34.58%, #282E79 44%, #180564 72.26%);
   }
-  .advantages h2 {
-    font-size: 22px;
-    font-weight: 800;
-    width: 240px;
-  }
   .advantages__block {
     grid-template-columns: 1fr;
     gap: 20px;
@@ -995,7 +951,7 @@ main {
     align-items: center;
     gap: 14px;
   }
-  .advantages__item img {
+  .advantages__img {
     margin: 0;
   }
 }
@@ -1005,11 +961,12 @@ main {
   margin-top: 80px;
   overflow-y: clip;
 }
-.hits h2 {
+.hits__title {
   font-size: 36px;
   font-weight: 800;
   text-transform: uppercase;
   margin-bottom: 40px;
+  color: #18154B;
 }
 .hits .pagination {
   right: 50%;
@@ -1056,6 +1013,9 @@ main {
   justify-content: center;
   align-items: center;
 }
+.hits__cart_on {
+  background: linear-gradient(73.56deg, #0D748B -10.13%, #1A0B73 75.49%);
+}
 .hits__product-img {
   height: 160px;
   margin: 0 auto;
@@ -1084,22 +1044,22 @@ main {
   justify-content: space-between;
   margin-bottom: 10px;
 }
-.hits__price-block h3 {
+.hits__price-text {
   font-size: 14px;
   font-weight: 700;
   color: #303239;
 }
-.hits__price-discount {
+.hits__discount-block {
   display: flex;
   align-items: center;
 }
-.hits__price-discount p {
+.hits__discount {
   font-size: 10px;
   color: #9B9B9B;
   text-decoration: line-through;
   margin-left: 8px;
 }
-.hits__label {
+.hits__label-block {
   position: absolute;
   top: 15px;
   left: 15px;
@@ -1107,7 +1067,7 @@ main {
   background-color: #F0F5FB;
   border-radius: 4px;
 }
-.hits__label p {
+.hits__label-text {
   text-transform: uppercase;
   padding: 3px 10px;
   font-size: 12px;
@@ -1169,10 +1129,6 @@ main {
   }
 }
 @media (max-width: 480px) {
-  .hits h2 {
-    font-size: 22px;
-    margin-bottom: 30px;
-  }
   .hits__product {
     height: 270px;
     padding: 40px 15px 15px 15px;
@@ -1186,16 +1142,16 @@ main {
     font-size: 12px;
     margin: 2px 0 6px;
   }
-  .hits__price-discount {
+  .hits__discount-block {
     display: unset;
   }
-  .hits__price-discount p {
+  .hits__discount {
     margin: 0;
   }
-  .hits__label {
+  .hits__label-block {
     height: 20px;
   }
-  .hits__label p {
+  .hits__label-text {
     font-size: 10px;
   }
   .hits__favourite {
@@ -1220,13 +1176,13 @@ main {
   grid-template-columns: 6.45fr 460px;
   margin-top: 80px;
 }
-.about h2 {
+.about__title {
   text-transform: uppercase;
   font-size: 36px;
   color: #18154B;
   margin-bottom: 40px;
 }
-.about__text p {
+.about__text {
   font-size: 16px;
   font-weight: 400;
   color: #303239;
@@ -1248,15 +1204,15 @@ main {
   margin-top: 80px;
   column-gap: 20px;
 }
-.about__point p {
+.about__point img {
+  box-shadow: 0 4px 20px 0 rgba(0, 7, 94, 0.1019607843);
+  border-radius: 50%;
+}
+.about__point-text {
   font-size: 16px;
   font-weight: 400;
   color: #303239;
   max-width: 130px;
-}
-.about__point img {
-  box-shadow: 0 4px 20px 0 rgba(0, 7, 94, 0.1019607843);
-  border-radius: 50%;
 }
 
 @media (max-width: 980px) {
@@ -1264,7 +1220,7 @@ main {
     display: block;
     margin-top: 60px;
   }
-  .about h2 {
+  .about__title {
     margin-bottom: 30px;
   }
   .about__img {
@@ -1288,10 +1244,10 @@ main {
     align-items: center;
     column-gap: 14px;
   }
-  .about__point p {
+  .about__point-text {
     max-width: none;
   }
-  .about h2 {
+  .about__title {
     font-size: 22px;
   }
 }
@@ -1311,12 +1267,12 @@ main {
 .help__blank .white-button {
   width: 240px;
 }
-.help h2 {
+.help__title {
   font-size: 28px;
   color: #FFFFFF;
   text-transform: uppercase;
 }
-.help h3 {
+.help__sub-title {
   color: #FFFFFF;
   margin: 10px 0 25px;
   font-size: 18px;
@@ -1335,7 +1291,7 @@ main {
   .help__blank {
     gap: 15px;
   }
-  .help h2 {
+  .help__title {
     font-size: 24px;
   }
 }
@@ -1352,10 +1308,10 @@ main {
   .help__label-for {
     position: absolute;
   }
-  .help h2 {
+  .help__title {
     font-size: 20px;
   }
-  .help h3 {
+  .help__sub-title {
     font-size: 14px;
   }
 }
@@ -1366,7 +1322,7 @@ main {
   margin-top: 80px;
   gap: 20px;
 }
-.contacts h2 {
+.contacts__title {
   color: #18154B;
   font-size: 36px;
   font-weight: 800;
@@ -1409,7 +1365,7 @@ main {
     display: block;
     margin-top: 60px;
   }
-  .contacts h2 {
+  .contacts__title {
     margin-bottom: 30px;
   }
   .contacts__map-block {
@@ -1420,10 +1376,10 @@ main {
   }
 }
 @media (max-width: 580px) {
-  .contacts h2 {
+  .contacts__title {
     font-size: 22px;
   }
-  .contacts h3 {
+  .contacts__point-title {
     font-size: 16px;
   }
   .contacts__social img {
@@ -1431,6 +1387,15 @@ main {
   }
   .contacts__point img {
     margin-top: 3px;
+  }
+}
+@media (max-width: 580px) {
+  .categories__title,
+  .advantages__title,
+  .hits__title {
+    font-size: 22px;
+    width: 270px;
+    margin-bottom: 30px;
   }
 }
 
