--- a/style/index.scss
+++ b/style/index.scss
@@ -48,10 +48,18 @@ main {
     grid-template-columns: 7.8fr 3.8fr;
     gap: 20px;
     margin-top: 40px;
-    h3 {
+    &__sub-title {
         font-size: 18px;
         font-weight: 600;
         color: $color-white;
+    }
+    &__title {
+        font-size: 38px;
+        font-weight: 800;
+        color: $color-white;
+        width: 341px;
+        margin-bottom: 20px;
+        text-transform: uppercase;
     }
     &__guarantee {
         box-shadow: $shadow;
@@ -60,23 +68,14 @@ main {
         padding: 80px 0 0 60px;
         position: relative;
         height: 440px;
-        h2 {
-            font-size: 38px;
-            font-weight: 800;
-            color: $color-white;
-            width: 341px;
-            margin-bottom: 20px;
-            text-transform: uppercase;
-            line-height: 51.83px;
-        }
         button {
             margin-top: 30px;
         }
-        img {
-            position: absolute;
-            right: 45px;
-            top: 95px;
-        }
+    }
+    &__miner-img {
+        position: absolute;
+        right: 45px;
+        top: 95px;
     }
     &__discount {
         border-radius: 10px;
@@ -100,21 +99,20 @@ main {
         width: 231px;
         margin-bottom: 10px;
         text-transform: uppercase;
-        line-height: 38.19px;
     }
     &__bitcoin {
         position: absolute;
         left: 8px;
         bottom: 23px;
     }
-    &__sub-title {
+    &__sub-title-block {
         display: flex;
         align-items: center;
         gap: 20px;
-        h2 {
-            font-size: 56px;
-            font-weight: 700;
-        }
+    }
+    &__sub-title-percent {
+        font-size: 56px;
+        font-weight: 700;
     }
 }
 @media (max-width: 1080px) {
@@ -122,7 +120,7 @@ main {
         grid-template-columns: 1fr;
         gap: 10px;
         margin-top: 30px;
-        &__sub-title {
+        &__sub-title-block {
             gap: 10px;
             flex-direction: column;
             align-items: flex-start;
@@ -141,15 +139,12 @@ main {
 @media (max-width: 710px) {
     .banner {
         margin-top: 20px;
-        &__sub-title {
-            h2 {
-                font-size: 38px;
-            }
+        &__sub-title-percent {
+            font-size: 38px;
         }
         &__discount-title {
             font-size: 20px;
             width: 166px;
-            line-height: 27.28px;
         }
         &__discount {
             padding: 30px 0 0 30px;
@@ -157,7 +152,7 @@ main {
             .to-catalog-white {
                 bottom: 20px;
             }
-            h3 {
+            .banner__sub-title {
                 font-size: 14px;
             }
         }
@@ -169,11 +164,11 @@ main {
             padding: 30px 0 0 30px;
             height: 400px;
             background: url("/img/microciruit.svg") no-repeat, radial-gradient(298px 281px at calc(100% + 73px) 65%, #346EA433 0, #346EA433 100%, transparent), linear-gradient(73.56deg, $linear-gradient-color-1 -10.13%, $linear-gradient-color-2 75.49%);
-            img {
-                right: 16px;
-                bottom: 36px;
-                top: unset;
-            }
+        }
+        &__miner-img {
+            right: 16px;
+            bottom: 36px;
+            top: unset;
         }
         .pagination {
             right: 50%;
@@ -189,27 +184,26 @@ main {
         }
         &__guarantee {
             background: url("/img/microciruit_mobile.svg") no-repeat top -14px left 0/ 353px 368px, radial-gradient(166px 166px at calc(100% + 90px) calc(100% - 128px), #346EA433 0, #346EA433 100%, transparent), linear-gradient(73.56deg, $linear-gradient-color-1 -10.13%, $linear-gradient-color-2 75.49%);
-            h2 {
-                font-size: 22px;
-                line-height: 30px;
-                max-width: calc(100vw - 100px);
-                margin-bottom: 10px;
-            }
-            h3 {
+            .banner__sub-title {
                 font-size: 16px;
             }
             .white-button {
                 margin-top: 18px;
             }
-            img {
-                width: 146px;
-            }
+        }
+        &__title {
+            font-size: $title-size-mobile;
+            max-width: calc(100vw - 100px);
+            margin-bottom: 10px;
+        }
+        &__miner-img {
+            width: 146px;
         }
     }
 }
 .categories {
     margin-top: 80px;
-    h2 {
+    &__title {
         font-size: $title-size;
         font-weight: 800;
         color: $title-color;
@@ -239,12 +233,11 @@ main {
             right: 65px;
             bottom: 30px;
         }
-        h3 {
-            width: calc(100% - 195px);
-            font-size: 18px;
-            line-height: 23.4px;
-            font-weight: 600;
-        }
+    }
+    &__product-name {
+        width: calc(100% - 195px);
+        font-size: 18px;
+        font-weight: 600;
     }
     &__product-img {
         position: absolute;
@@ -269,11 +262,10 @@ main {
             radial-gradient(100px at -16px center,$linear-gradient-color-2 100px, transparent);
             height: 140px;
             padding: 20px 20px 0 0;
-            h3 {
-                font-size: 16px;
-                width: calc(100% - 140px);
-                line-height: 20.8px;
-            }
+        }
+        &__product-name {
+            font-size: 16px;
+            width: calc(100% - 140px);
         }
         &__product-img {
             width: 110px;
@@ -287,9 +279,6 @@ main {
 }
 @media (max-width: 710px) {
     .categories {
-        h2 {
-            font-size: $title-size-mobile;
-        }
         &__product-list {
             grid-template-columns: 1fr;
         }
@@ -306,7 +295,7 @@ main {
     border-radius: 10px;
     position: relative;
     padding: 50px 10px 0 60px;
-    h2 {
+    &__title {
         font-size: $title-size;
         font-weight: 800;
         width: 340px;
@@ -328,18 +317,16 @@ main {
         top: 50px;
         right: 0;
     }
-    &__item {
-        img {
-            margin-bottom: 4px;
-            border-radius: 50%;
-            box-shadow: 0 4px 40px 0 #000654E6;
-        }
-        h3 {
-            font-size: 16px;
-            font-weight: 600;
-            color: $color-white;
-            width: 180px;
-        }
+    &__item-img {
+        margin-bottom: 4px;
+        border-radius: 50%;
+        box-shadow: 0 4px 40px 0 #000654E6;
+    }
+    &__item-text {
+        font-size: 16px;
+        font-weight: 600;
+        color: $color-white;
+        width: 180px;
     }
 }
 @media (max-width: 1080px) {
@@ -380,11 +367,6 @@ main {
                 url("/img/advantages_bg_mobile.svg"),
                 radial-gradient(420px 420px at -8.58% -1.44%, $radial-gradient-color-0, $radial-gradient-color-1 , $radial-gradient-color-2, $radial-gradient-color-3, $radial-gradient-color-4, $radial-gradient-color-5, $radial-gradient-color-6, $radial-gradient-color-7, transparent 72.26%),
                 radial-gradient(420px 420px at 108.58% 57.44%, $radial-gradient-color-0, $radial-gradient-color-1 , $radial-gradient-color-2, $radial-gradient-color-3, $radial-gradient-color-4, $radial-gradient-color-5, $radial-gradient-color-6, $radial-gradient-color-7);
-        h2 {
-            font-size: $title-size-mobile;
-            font-weight: 800;
-            width: 240px;
-        }
         &__block {
             grid-template-columns: 1fr;
             gap: 20px;
@@ -393,9 +375,9 @@ main {
             display: flex;
             align-items: center;
             gap: 14px;
-            img {
-                margin: 0;
-            }
+        }
+        &__img {
+            margin: 0;
         }
     }
 }
@@ -404,11 +386,12 @@ main {
     height: 490px;
     margin-top: 80px;
     overflow-y: clip;
-    h2 {
+    &__title {
         font-size: $title-size;
         font-weight: 800;
         text-transform: uppercase;
         margin-bottom: 40px;
+        color: $title-color;
     }
     .pagination {
         right: 50%;
@@ -455,6 +438,9 @@ main {
         justify-content: center;
         align-items: center;
     }
+    &__cart_on {
+        background: linear-gradient(73.56deg, #0D748B -10.13%, #1A0B73 75.49%);
+    }
     &__product-img {
         height: 160px;
         margin: 0 auto;
@@ -482,39 +468,39 @@ main {
         align-items: center;
         justify-content: space-between;
         margin-bottom: 10px;
-        h3 {
-            font-size: 14px;
-            font-weight: 700;
-            color: #303239;
-        }
     }
-    &__price-discount {
+    &__price-text {
+        font-size: 14px;
+        font-weight: 700;
+        color: #303239;
+    }
+    &__discount-block {
         display: flex;
         align-items: center;
-        p {
-            font-size: 10px;
-            color: #9B9B9B;
-            text-decoration: line-through;
-            margin-left: 8px;
-        }
     }
-    &__label {
+    &__discount {
+        font-size: 10px;
+        color: #9B9B9B;
+        text-decoration: line-through;
+        margin-left: 8px;
+    }
+    &__label-block {
         position: absolute;
         top: 15px;
         left: 15px;
         height: 22px;
         background-color: $body-gb;
         border-radius: 4px;
-        p {
-            text-transform: uppercase;
-            padding: 3px 10px;
-            font-size: 12px;
-            font-weight: 800;
-            background: linear-gradient(73.56deg, $linear-gradient-color-1 -10.13%, $linear-gradient-color-2 75.49%);
-            -webkit-background-clip: text;
-            background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
+    }
+    &__label-text {
+        text-transform: uppercase;
+        padding: 3px 10px;
+        font-size: 12px;
+        font-weight: 800;
+        background: linear-gradient(73.56deg, $linear-gradient-color-1 -10.13%, $linear-gradient-color-2 75.49%);
+        -webkit-background-clip: text;
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
     }
     &__favourite {
         position: absolute;
@@ -569,10 +555,6 @@ main {
 }
 @media (max-width: 480px) {
     .hits {
-        h2 {
-            font-size: $title-size-mobile;
-            margin-bottom: 30px;
-        }
         &__product {
             height: 270px;
             padding: 40px 15px 15px 15px;
@@ -586,17 +568,17 @@ main {
             font-size: 12px;
             margin: 2px 0 6px;
         }
-        &__price-discount {
+        &__discount-block {
             display: unset;
-            p {
-                margin: 0;
-            }
         }
-        &__label {
+        &__discount {
+            margin: 0;
+        }
+        &__label-block {
             height: 20px;
-            p {
-                font-size: 10px;
-            }
+        }
+        &__label-text {
+            font-size: 10px;
         }
         &__favourite {
             height: 20px;
@@ -620,19 +602,16 @@ main {
     column-gap: 75px;
     grid-template-columns: 6.45fr 460px;
     margin-top: 80px;
-    h2 {
+    &__title {
         text-transform: uppercase;
         font-size: $title-size;
         color: $title-color;
         margin-bottom: 40px;
     }
-
     &__text {
-        p {
-            font-size: 16px;
-            font-weight: 400;
-            color: $text-color-black;
-        }
+        font-size: 16px;
+        font-weight: 400;
+        color: $text-color-black;
     }
     &__opt-text {
         padding-top: 23.2px;
@@ -652,23 +631,23 @@ main {
         column-gap: 20px;
     }
     &__point {
-        p {
-            font-size: 16px;
-            font-weight: 400;
-            color: $text-color-black;
-            max-width: 130px;
-        }
         img {
             box-shadow: 0 4px 20px 0 #00075E1A;
             border-radius: 50%;
         }
+    }
+    &__point-text {
+        font-size: 16px;
+        font-weight: 400;
+        color: $text-color-black;
+        max-width: 130px;
     }
 }
 @media (max-width: 980px) {
     .about {
         display: block;
         margin-top: 60px;
-        h2 {
+        &__title {
             margin-bottom: 30px;
         }
         &__img {
@@ -693,11 +672,11 @@ main {
             display: flex;
             align-items: center;
             column-gap: 14px;
-            p {
-                max-width: none;
-            }
         }
-        h2 {
+        &__point-text {
+            max-width: none;
+        }
+        &__title {
             font-size: $title-size-mobile;
         }
     }
@@ -720,12 +699,12 @@ main {
             width: 240px;
         }
     }
-    h2 {
+    &__title {
         font-size: 28px;
         color: $color-white;
         text-transform: uppercase;
     }
-    h3 {
+    &__sub-title {
         color: $color-white;
         margin: 10px 0 25px;
         font-size: 18px;
@@ -743,7 +722,7 @@ main {
         &__blank {
             gap: 15px;
         }
-        h2 {
+        &__title {
             font-size: 24px;
         }
     }
@@ -763,10 +742,10 @@ main {
         &__label-for {
             position: absolute;
         }
-        h2 {
+        &__title {
             font-size: 20px;
         }
-        h3 {
+        &__sub-title {
             font-size: 14px;
         }
     }
@@ -777,7 +756,7 @@ main {
     justify-items: flex-end;
     margin-top: 80px;
     gap: 20px;
-    h2 {
+    &__title {
         color: $title-color;
         font-size: $title-size;
         font-weight: 800;
@@ -819,7 +798,7 @@ main {
     .contacts {
         display: block;
         margin-top: 60px;
-        h2 {
+        &__title {
             margin-bottom: 30px;
         }
         &__map-block {
@@ -832,10 +811,10 @@ main {
 }
 @media (max-width: 580px) {
     .contacts {
-        h2 {
+        &__title {
             font-size: $title-size-mobile;
         }
-        h3 {
+        &__point-title {
             font-size: 16px;
         }
         &__social img {
@@ -844,5 +823,15 @@ main {
         &__point img {
             margin-top: 3px;
         }
+    }
+}
+// заголовки, блоки которых без 580px
+@media (max-width: 580px) {
+    .categories__title,
+    .advantages__title,
+    .hits__title{
+        font-size: $title-size-mobile;
+        width: 270px;
+        margin-bottom: 30px;
     }
 }
